Final cleanup of dead resources

--- a/lib/messagebundles/MessagesBundle_da.properties
+++ b/lib/messagebundles/MessagesBundle_da.properties
@@ -92,7 +92,7 @@ APP_TITLE=LimeWire: Anvender Gnutella-netværket
 ABOUT_TITLE=Om LimeWire
 ABOUT_LABEL_START=LimeWire klient
 ABOUT_LABEL_ADDRESS=http://www.limewire.com
-ABOUT_LABEL_END=Copyright (c)2000-2003 Lime Wire LLC
+ABOUT_LABEL_END=Copyright (c)2000-2004 Lime Wire LLC
 ABOUT_LABEL_TITLE=Om LimeWire
 ABOUT_BUTTON_LABEL=OK
 ABOUT_BUTTON_TIP=Luk "Om LimeWire"-vinduet
@@ -264,7 +264,6 @@ SEARCH_STOP_BUTTON_TIP=Stop indsamling af søgeresultater for den valgte søgning
 SEARCH_PUBLIC_KILL_STRING=Luk søgning
 SEARCH_PUBLIC_LAUNCH_STRING=Åbn handling
 SEARCH_PUBLIC_STOP_STRING=Stop søgning
-SEARCH_PUBLIC_GROUP_STRING=Grupperede
 SEARCH_PUBLIC_BROWSE_STRING=Gennemse vært
 SEARCH_PUBLIC_CHAT_STRING=Chat med vært
 SEARCH_PUBLIC_BITZI_LOOKUP_STRING=Bitzi web opslag...
@@ -295,7 +294,6 @@ RESULT_PANEL_NAME=Navn
 RESULT_PANEL_TYPE=Type
 RESULT_PANEL_SIZE=Str.
 RESULT_PANEL_SPEED=Hastighed
-RESULT_PANEL_SCORE=Score
 RESULT_PANEL_CHAT=Chat
 RESULT_PANEL_LOCATION=Adresse
 RESULT_PANEL_COUNT=#
@@ -374,9 +372,7 @@ DOWNLOAD_TIME_REMAINING_COLUMN=Tid
 #??? DOWNLOAD_SERVER_COLUMN=Vendor/version
 DOWNLOAD_STATUS_QUEUED=I kø
 DOWNLOAD_STATUS_CONNECTING=Opretter forbindelse...
-DOWNLOAD_STATUS_WAITING_START=Venter
-DOWNLOAD_STATUS_WAITING_MIDDLE=s på
-DOWNLOAD_STATUS_WAITING_END=optaget
+DOWNLOAD_STATUS_WAITING=Venter på optaget
 DOWNLOAD_STATUS_COMPLETE=Færdig
 DOWNLOAD_STATUS_ABORTED=Afbrudt
 DOWNLOAD_STATUS_FAILED=Kunne ikke downloades
@@ -692,11 +688,12 @@ MESSAGE_OVERWRITE_EXISTING_FILE=Overskriv eksisterende fil
 MESSAGE_FILE_LAUNCHING_SECURITY_MESSAGE=LimeWire vil ikke åbne den angivne fil af sikkerhedsgrunde.
 MESSAGE_CONFIRM_FILE_DELETE=Er De sikker på at De vil slette den/de valgte fil(er)?
 MESSAGE_UNABLE_TO_DELETE_FILE_START=Ikke i stand til at slette filen
-MESSAGE_UNABLE_TO_DELETE_FILE_END=Den kan være i brug af et andet program.
+MESSAGE_UNABLE_TO_DELETE_FILE_END=. Den kan være i brug af et andet program.
 MESSAGE_UNABLE_TO_DELETE_DIRECTORY_START=Ikke i stand til at slette mappen
-MESSAGE_UNABLE_TO_DELETE_DIRECTORY_END=. Den kan være i brug af et andet program.
+MESSAGE_UNABLE_TO_RENAME_DIRECTORY_START=Ikke i stand til at omdøbe mappen
+MESSAGE_UNABLE_TO_CHANGE_DIRECTORY_END=. Den kan være i brug af et andet program.
 MESSAGE_UNABLE_TO_RENAME_FILE_START=Ikke i stand til at omdøbe filen
-MESSAGE_UNABLE_TO_RENAME_FILE_END=Den kan være i brug af et andet program.
+MESSAGE_UNABLE_TO_RENAME_FILE_END=. Den kan være i brug af et andet program.
 MESSAGE_INCOMPLETE_DIRECTORY_START=LimeWire vil ikke lade Dem
 MESSAGE_INCOMPLETE_DIRECTORY_END=mappen er forbeholdt ufuldstændige filer.
 MESSAGE_INVALID_SAVE_DIRECTORY=LimeWire var ikke i stand til at bruge den angivne mappe til at arkivere filer i. Prøv venligst at vælge en anden mappe.
@@ -709,6 +706,8 @@ MESSAGE_CONTINUE_DOWNLOAD=Ønsker du at blive ved med at downloade den?
 ################################################################################
 INVALID_SAVE_DIR_LABEL=Den mappe som er valgt til at arkivere filer i kan ikke bruges. Vælg venligst en ny mappe med mappevælgeren.
 
+ERROR_INTERNAL_SERVLET=Der er sket en fejl internt i LimeWire-programmet. Ikke desto mindre kan LimeWire komme sig oven på fejlen og skulle fungere normalt.
+
 ################################################################################
 # Key/Value pairs for error messages
 ################################################################################
@@ -718,7 +717,6 @@ ERROR_TOO_LOW_FOR_ULTRAPEER=Ultrapeers med periferi-klienter skal minimum bruge 
 ERROR_TOO_HIGH_FOR_LEAF=Periferi-klienter har kun bruge for én forbindelse, da de er forbundet til en UltraPeer.
 ERROR_PORT=Kunne ikke finde en port til brug for indkommende forbindelser.\nVælg venligst en port i indstillingsvinduet.
 ERROR_INCOMING_CONNECTIONS=Kunne ikke lytte til socket efter indkommende forbindelser; afbryder.
-ERROR_INTERNAL=Der er sket en fejl internt i LimeWire-programmet. Ikke desto mindre kan LimeWire komme sig oven på fejlen og skulle fungere normalt. For at hjælpe os med fejlrettelser, beder vi Dem om at sende følgende tekst med email til bugs@limewire.com.
 ERROR_THREE_CHARACTER_SEARCH=Deres søgning skal minimum være på tre tegn for at undgå forstoppelse af netværket med en masse små søgninger.
 ERROR_NETWORK_FLOODING=Denne søgning kan resultere i et væld af resultater og tynge netværket med trafik. Er De sikker på at De vil fortsætte?
 ERROR_BROWSE_FAILED=Kunne ikke gennemse filer på den ønskede maskine. Maskinen accepterer sikkert ikke indkommende forbindelser.
@@ -1107,7 +1105,6 @@ OPTIONS_PORT_BOX_LABEL=Lyt på port:
 OPTIONS_FORCE_IP_TITLE=Gennemtving lokal IP
 OPTIONS_FORCE_IP_LABEL=Tillader Dem at gennemtvinge Deres IP-adresse hvis De er bag en brandmur og ønsker at andre gnutella klienter kan oprette forbindelse til Dem uden at sende en push forespørgsel.
 OPTIONS_FORCE_IP_CHECK_BOX_LABEL=Gennemtving IP
-OPTIONS_FORCE_IP_IP_LABEL=Adresse:
 OPTIONS_FORCE_IP_PORT_LABEL=Port:
 
 ################################################################################
