--- a/lib/messagebundles/MessagesBundle_hu.properties
+++ b/lib/messagebundles/MessagesBundle_hu.properties
@@ -248,7 +248,6 @@ SEARCH_STOP_BUTTON_TIP=Kiv\u00e1lasztott c\u00edmke keres\u00e9si eredm\u00e9mye
 SEARCH_PUBLIC_KILL_STRING=Keres\u00e9s bez\u00e1r\u00e1sa
 SEARCH_PUBLIC_LAUNCH_STRING=Kci\u00f3 ind\u00edt\u00e1sa
 SEARCH_PUBLIC_STOP_STRING=Keres\u00e9s meg\u00e1ll\u00edt\u00e1sa
-SEARCH_PUBLIC_GROUP_STRING=Csoportos\u00edt\u00e1s
 SEARCH_PUBLIC_BROWSE_STRING=Kiszolg\u00e1l\u00f3 tall\u00f3z\u00e1sa
 SEARCH_PUBLIC_CHAT_STRING=Cseveg\u00e9s a kiszolg\u00e1l\u00f3val
 SEARCH_PUBLIC_BITZI_LOOKUP_STRING=Bitzi honlap keres\u00e9s
@@ -278,7 +277,6 @@ RESULT_PANEL_NAME=N\u00e9v
 RESULT_PANEL_TYPE=T\u00edpus
 RESULT_PANEL_SIZE=M\u00e9ret
 RESULT_PANEL_SPEED=Sebess\u00e9g
-RESULT_PANEL_SCORE=Tal\u00e1lat
 RESULT_PANEL_CHAT=Cseveg\u00e9s
 RESULT_PANEL_LOCATION=Elhelyezked\u00e9s
 RESULT_PANEL_COUNT=#
@@ -353,9 +351,7 @@ DOWNLOAD_SPEED_COLUMN=Sebess\u00e9g
 DOWNLOAD_TIME_REMAINING_COLUMN=Id\u0151
 DOWNLOAD_STATUS_QUEUED=Besorolva
 DOWNLOAD_STATUS_CONNECTING=Kapcsol\u00f3dva...
-DOWNLOAD_STATUS_WAITING_START=V\u00e1rakoz\u00e1s
-DOWNLOAD_STATUS_WAITING_MIDDLE=v\u00e1laszra
-DOWNLOAD_STATUS_WAITING_END=foglalt
+DOWNLOAD_STATUS_WAITING=V\u00e1rakoz\u00e1s v\u00e1laszra foglalt
 DOWNLOAD_STATUS_COMPLETE=K\u00e9sz
 DOWNLOAD_STATUS_ABORTED=Megszak\u00edtva
 DOWNLOAD_STATUS_FAILED=Nem lehet let\u00f6lteni
@@ -667,10 +663,11 @@ MESSAGE_OVERWRITE_EXISTING_FILE=Megl\u00e9v\u0151 file fel\u00fcl\u00edr\u00e1sa
 MESSAGE_FILE_LAUNCHING_SECURITY_MESSAGE=LimeWire nem ind\u00edtja a megadott filet biztons\u00e1gi okokb\u00f3l.
 MESSAGE_CONFIRM_FILE_DELETE=Biztosan t\u00f6r\u00f6lni akarja a kijel\u00f6lt file(oka)t?
 MESSAGE_UNABLE_TO_DELETE_FILE_START=File nem t\u00f6r\u00f6lhet\u0151
-MESSAGE_UNABLE_TO_DELETE_FILE_END=Ezt egy m\u00e1sik program haszn\u00e1lja.
-MESSAGE_UNABLE_TO_DELETE_DIRECTORY_START=K\u00f6nyvt\u00e1r nem t\u00f6r\u00f6lhet\u0151 
-MESSAGE_UNABLE_TO_DELETE_DIRECTORY_END=. Ezt egy m\u00e1sik program haszn\u00e1lja.
-MESSAGE_UNABLE_TO_RENAME_FILE_START=File \u00e1tnevez\u00e9se nem lehets\u00e9ges 
+MESSAGE_UNABLE_TO_DELETE_FILE_END=. Ezt egy m\u00e1sik program haszn\u00e1lja.
+MESSAGE_UNABLE_TO_DELETE_DIRECTORY_START=K\u00f6nyvt\u00e1r nem t\u00f6r\u00f6lhet\u0151
+MESSAGE_UNABLE_TO_RENAME_DIRECTORY_START=K\u00f6nyvt\u00e1r \u00e1tnevez\u00e9se nem lehets\u00e9ges
+MESSAGE_UNABLE_TO_CHANGE_DIRECTORY_END=. Ezt egy m\u00e1sik program haszn\u00e1lja.
+MESSAGE_UNABLE_TO_RENAME_FILE_START=File \u00e1tnevez\u00e9se nem lehets\u00e9ges
 MESSAGE_UNABLE_TO_RENAME_FILE_END=. Ezt egy m\u00e1sik program haszn\u00e1lja.
 MESSAGE_INCOMPLETE_DIRECTORY_START=LimeWire nem engedi meg, hogy 
 MESSAGE_INCOMPLETE_DIRECTORY_END=ebben a folderben tartsa a nem komplett fileokat.
@@ -684,6 +681,8 @@ MESSAGE_CONTINUE_DOWNLOAD=Folytatni akarja a let\u00f6lt\u00e9st?
 ################################################################################
 #??? INVALID_SAVE_DIR_LABEL=The stored directory for saving files is not valid. Please enter a new directory in the directory chooser.
 
+ERROR_INTERNAL_SERVLET=A LimeWire futtat\u00e1sakor bels\u0151 hiba l\u00e9pett fel. A program a hib\u00e1n \u00e1tl\u00e9p \u00e9s norm\u00e1lisan dolgozik tov\u00e1bb.
+
 ################################################################################
 # Key/Value pairs for error messages
 ################################################################################
@@ -693,7 +692,6 @@ ERROR_TOO_LOW_FOR_ULTRAPEER=Az ultrapartner el\u00e1gaz\u00e1ssal legal\u00e1bb 
 ERROR_TOO_HIGH_FOR_LEAF=Az el\u00e1gaz\u00e1s csak egy kapcsolatot ig\u00e9nyel, ha ezek ultrapartnerhez kapcsol\u00f3dnak.
 ERROR_PORT=Nem tal\u00e1lhat\u00f3 port a bej\u00f6v\u0151 kapcsolatokhoz.\nK\u00e9rem adjon meg egy portot a konfigur\u00e1ci\u00f3s ablakb\u00f3l.
 ERROR_INCOMING_CONNECTIONS=Nem figyelhet\u0151 a bej\u00f6v\u0151 kapcsolati pont; megszak\u00edt\u00e1s.
-ERROR_INTERNAL=A LimeWire futtat\u00e1sakor bels\u0151 hiba l\u00e9pett fel. A program a hib\u00e1n \u00e1tl\u00e9p \u00e9s norm\u00e1lisan dolgozik tov\u00e1bb. K\u00e9rj\u00fck seg\u00edtsen a hib\u00e1t kijav\u00edtani, k\u00fcldje el a hiba\u00fczenetet a bugs@limewire.com c\u00edmre emailben.
 ERROR_THREE_CHARACTER_SEARCH=Keres\u00e9sn\u00e9l legal\u00e1bb h\u00e1rom karaktert adjon meg, mert a h\u00e1l\u00f3zatot t\u00falterheli.
 ERROR_NETWORK_FLOODING=Ez a keres\u00e9s igen sok eredm\u00e9nyt adna \u00e9s lelassulna a h\u00e1l\u00f3zat. Biztos, hogy folytatni akarja?
 ERROR_BROWSE_FAILED=A k\u00edv\u00e1nt kiszolg\u00e1l\u00f3n nem b\u00f6ng\u00e9szhet fileokat. Ez a g\u00e9p val\u00f3sz\u00edn\u0171leg nem fogad t\u00f6bb bej\u00f6v\u0151 kapcsolatot.
@@ -743,7 +741,7 @@ OPTIONS_CONNECTIONS_MAIN_TITLE=Kapcsolatok
 OPTIONS_SHUTDOWN_MAIN_TITLE=Le\u00e1ll\u00edt\u00e1s
 OPTIONS_CHAT_MAIN_TITLE=Cseveg\u00e9s
 OPTIONS_PLAYER_MAIN_TITLE=Lej\u00e1tsz\u00f3
-OPTIONS_BROWSER_MAIN_TITLE=B\u00f6ng\u00e9sz\u0151
+#??? OPTIONS_APPS_MAIN_TITLE=Helper apps
 #??? OPTIONS_THEME_MAIN_TITLE=Theme
 OPTIONS_SKIN_MAIN_TITLE=B\u0151r
 OPTIONS_SEARCH_MAIN_TITLE=Keres\u00e9s
@@ -908,8 +906,6 @@ OPTIONS_PLAYER_PREFERENCE_LABEL=A bels\u0151 lej\u00e1tsz\u00f3t, vagy a rendsze
 OPTIONS_BROWSER_PREFERENCE_TITLE=B\u00f6ng\u00e9sz\u0151 be\u00e1ll\u00edt\u00e1sok
 OPTIONS_BROWSER_PREFERENCE_LABEL=Megadhatja, melyik b\u00f6ng\u00e9sz\u0151t akarja haszn\u00e1lni.
 OPTIONS_BROWSER_BOX_LABEL=B\u00f6ng\u00e9sz\u0151
-OPTIONS_BROWSER_DEFAULT_BUTTON_LABEL=Alapbe\u00e1ll\u00edt\u00e1s haszn\u00e1lata
-OPTIONS_BROWSER_DEFAULT_BUTTON_TIP=Alapb\u00f6ng\u00e9sz\u0151 haszn\u00e1lata
 
 ################################################################################
 # Key/Value pairs for theme options
@@ -1036,7 +1032,6 @@ OPTIONS_PORT_BOX_LABEL=Figyel\u0151 port:
 OPTIONS_FORCE_IP_TITLE=Helyi IP c\u00edm kik\u00e9nyszer\u00edt\u00e9se
 OPTIONS_FORCE_IP_LABEL=Saj\u00e1t IP kik\u00e9nyszer\u00edt\u00e9se a t\u0171zfal m\u00f6g\u00f6tt, ha \u00faj gnutella klienst akar egy \u00edr\u00e1si k\u00e9relem k\u00fcld\u00e9se n\u00e9lk\u00fcl.
 OPTIONS_FORCE_IP_CHECK_BOX_LABEL=IP kik\u00e9nyszer\u00edt\u00e9se
-OPTIONS_FORCE_IP_IP_LABEL=IP C\u00edm:
 OPTIONS_FORCE_IP_PORT_LABEL=Port:
 
 ################################################################################
@@ -1140,8 +1135,8 @@ STATS_TOTAL_RECEIVED_TCP_MESSAGES_TITLE=TCP
 #??? STATS_TOTAL_RECEIVED_TCP_MESSAGES_LABEL=All Gnutella messages received over TCP, by message type.
 STATS_TOTAL_RECEIVED_UDP_MESSAGES_TITLE=UDP
 #??? STATS_TOTAL_RECEIVED_UDP_MESSAGES_LABEL=All Gnutella messages received over UDP, by message type.
-STATS_RECEIVED_TCP_UDP_TITLE=TCP vagy UDP
-#??? STATS_RECEIVED_TCP_UDP_LABEL=Total Gnutella messages received over TCP or UDP.
+STATS_RECEIVED_ALL_TITLE=TCP, UDP vagy Multicast
+#??? STATS_RECEIVED_ALL_LABEL=Total Gnutella messages received over TCP, UDP or Multicast.
 #??? STATS_DUPLICATE_RECEIVED_TCP_QUERIES_TITLE=Duplicate TCP queries
 #??? STATS_DUPLICATE_RECEIVED_TCP_QUERIES_LABEL=Number of duplicate queries received over TCP versus the total number of queries.
 # Advanced Gnutella Message hops/ttl for queries
@@ -1162,8 +1157,8 @@ STATS_TOTAL_RECEIVED_BYTES_TCP_MESSAGES_TITLE=TCP
 #??? STATS_TOTAL_RECEIVED_BYTES_TCP_MESSAGES_LABEL=Total kilobytes for Gnutella messages received over TCP, by message type.
 STATS_TOTAL_RECEIVED_BYTES_UDP_MESSAGES_TITLE=UDP
 #??? STATS_TOTAL_RECEIVED_BYTES_UDP_MESSAGES_LABEL=Total kilobytes for Gnutella messages received over UDP, by message type.
-STATS_RECEIVED_BYTES_TCP_UDP_TITLE=TCP vagy UDP
-#??? STATS_RECEIVED_BYTES_TCP_UDP_LABEL=Total kilobytes for Gnutella messages received over TCP or UDP.
+STATS_RECEIVED_BYTES_ALL_TITLE=TCP, UDP vagy Multicast
+#??? STATS_RECEIVED_BYTES_ALL_LABEL=Total kilobytes for Gnutella messages received over TCP, UDP or Multicast.
 #??? STATS_DUPLICATE_RECEIVED_BYTES_TCP_QUERIES_TITLE=Duplicate TCP queries
 #??? STATS_DUPLICATE_RECEIVED_BYTES_TCP_QUERIES_LABEL=Total kilobytes in duplicate queries received over TCP versus the total number of queries.
 # Advanced Gnutella Message hops/ttl for queries in kilobytes
@@ -1258,8 +1253,8 @@ STATS_TOTAL_SENT_TCP_MESSAGES_TITLE=TCP
 #??? STATS_TOTAL_SENT_TCP_MESSAGES_LABEL=All Gnutella messages sent over TCP, by message type.
 STATS_TOTAL_SENT_UDP_MESSAGES_TITLE=UDP
 #??? STATS_TOTAL_SENT_UDP_MESSAGES_LABEL=All Gnutella messages sent over UDP, by message type.
-STATS_SENT_TCP_UDP_TITLE=TCP vagy UDP
-#??? STATS_SENT_TCP_UDP_LABEL=Total Gnutella messages sent over TCP or UDP.
+STATS_SENT_ALL_TITLE=TCP, UDP vagy Multicast
+#??? STATS_SENT_ALL_LABEL=Total Gnutella messages sent over TCP, UDP or Multicast.
 
 # number of kilobytes
 STATS_TOTAL_SENT_BYTES_MESSAGES_TITLE=\u00d6sszes
@@ -1268,8 +1263,8 @@ STATS_TOTAL_SENT_BYTES_TCP_MESSAGES_TITLE=TCP
 #??? STATS_TOTAL_SENT_BYTES_TCP_MESSAGES_LABEL=Total kilobytes for Gnutella messages sent over TCP, by message type.
 STATS_TOTAL_SENT_BYTES_UDP_MESSAGES_TITLE=UDP
 #??? STATS_TOTAL_SENT_BYTES_UDP_MESSAGES_LABEL=Total kilobytes for Gnutella messages sent over UDP, by message type.
-STATS_SENT_BYTES_TCP_UDP_TITLE=TCP vagy UDP
-#??? STATS_SENT_BYTES_TCP_UDP_LABEL=Total kilobytes for Gnutella messages sent over TCP or UDP.
+STATS_SENT_BYTES_ALL_TITLE=TCP, UDP vagy Multicast
+#??? STATS_SENT_BYTES_TCP_UDP_LABEL=Total kilobytes for Gnutella messages sent over TCP, UDP or Multicast.
 
 # number of messages sent for LimeWire-specific stats -- TCP
 STATS_LIME_SENT_TCP_MESSAGES_TITLE=\u00d6sszes
