--- a/lib/messagebundles/MessagesBundle_is.properties
+++ b/lib/messagebundles/MessagesBundle_is.properties
@@ -253,7 +253,6 @@ SEARCH_STOP_BUTTON_TIP=Hætta að safna gögnum fyrir valinn flipa
 SEARCH_PUBLIC_KILL_STRING=Loka leit
 SEARCH_PUBLIC_LAUNCH_STRING=Keyra aðgerð
 SEARCH_PUBLIC_STOP_STRING=Hætta leit
-SEARCH_PUBLIC_GROUP_STRING=Hópa saman
 SEARCH_PUBLIC_BROWSE_STRING=Skoða skrár hjá aðila
 SEARCH_PUBLIC_CHAT_STRING=Spjalla við aðila
 SEARCH_PUBLIC_BITZI_LOOKUP_STRING=Bitzi vefleit...
@@ -284,7 +283,6 @@ RESULT_PANEL_NAME=Nafn
 RESULT_PANEL_TYPE=Tegund
 RESULT_PANEL_SIZE=Stærð
 RESULT_PANEL_SPEED=Hraði
-RESULT_PANEL_SCORE=Merki
 RESULT_PANEL_CHAT=Spjalla
 RESULT_PANEL_LOCATION=Staðsetning
 RESULT_PANEL_COUNT=#
@@ -363,9 +361,7 @@ DOWNLOAD_TIME_REMAINING_COLUMN=Eftirstöðvar
 DOWNLOAD_SERVER_COLUMN=Forrit/útgáfa
 DOWNLOAD_STATUS_QUEUED=Á bið
 DOWNLOAD_STATUS_CONNECTING=Tengist...
-DOWNLOAD_STATUS_WAITING_START=Bíð 
-DOWNLOAD_STATUS_WAITING_MIDDLE=sek eftir 
-DOWNLOAD_STATUS_WAITING_END=uppteknum
+DOWNLOAD_STATUS_WAITING=Bíð eftir uppteknum
 DOWNLOAD_STATUS_COMPLETE=Lokið
 DOWNLOAD_STATUS_ABORTED=Hætt við
 DOWNLOAD_STATUS_FAILED=Gat ekki vistað niður
@@ -680,11 +676,12 @@ MESSAGE_OVERWRITE_EXISTING_FILE=Skrifa yfir núverandi skrá
 MESSAGE_FILE_LAUNCHING_SECURITY_MESSAGE=LimeWire mun ekki keyra viðkomandi skrá af öryggisástæðum.
 MESSAGE_CONFIRM_FILE_DELETE=Ertu viss um að þú viljir eyða völdum skrám?
 MESSAGE_UNABLE_TO_DELETE_FILE_START=Ekki tókst að eyða skrá
-MESSAGE_UNABLE_TO_DELETE_FILE_END=Annað forrit gæti verið að nota hana.
+MESSAGE_UNABLE_TO_DELETE_FILE_END=. Annað forrit gæti verið að nota hana.
 MESSAGE_UNABLE_TO_DELETE_DIRECTORY_START=Ekki tókst að eyða skráarsafni
-MESSAGE_UNABLE_TO_DELETE_DIRECTORY_END=Annað forrit gæti verið að nota það.
+MESSAGE_UNABLE_TO_RENAME_DIRECTORY_START=Ekki tókst að breyta skráarsafni
+MESSAGE_UNABLE_TO_CHANGE_DIRECTORY_END=. Annað forrit gæti verið að nota það.
 MESSAGE_UNABLE_TO_RENAME_FILE_START=Ekki tókst að breyta skráarnafni
-MESSAGE_UNABLE_TO_RENAME_FILE_END=Annað forrit gæti verið að nota hana.
+MESSAGE_UNABLE_TO_RENAME_FILE_END=. Annað forrit gæti verið að nota hana.
 MESSAGE_INCOMPLETE_DIRECTORY_START=LimeWire mun ekki leyfa þér að
 MESSAGE_INCOMPLETE_DIRECTORY_END=skráarsafninu sem geymir ókláraðar skrár.
 MESSAGE_INVALID_SAVE_DIRECTORY=LimeWire gat ekki notað valið skráarsafn til að geyma vistaðar skrár. Vinsamlegast viljið annað skráarsafn.
@@ -697,6 +694,8 @@ MESSAGE_CONTINUE_DOWNLOAD=Á að halda áfram niðurhali?
 ################################################################################
 INVALID_SAVE_DIR_LABEL=Skráarsafnið sem geymir vistaðar skrár finnst ekki. Vinsamlega tiltakið nýtt í stillingunum.
 
+ERROR_INTERNAL_SERVLET=Upp hefur komið innbyggð villa við keyrslu á LimeWire. Samt sem áður getur LimeWire lagað þessa villu og ætti að starfa eðlilega.
+
 ################################################################################
 # Key/Value pairs for error messages
 ################################################################################
@@ -706,7 +705,6 @@ ERROR_TOO_LOW_FOR_ULTRAPEER=Ofurhálfbrú með endahnútum þarfnast allaveganna sex 
 ERROR_TOO_HIGH_FOR_LEAF=Endahnútar þarfnast aðeins einnar tengingar þar sem þeir eru tengdir ofurhálfbrú.
 ERROR_PORT=Fann ekki port fyrir tengingar inn til þín.\nVinsamlega tiltakið port í stillingunum.
 ERROR_INCOMING_CONNECTIONS=Tókst ekki að hlusta eftir tengingum; hætti við.
-ERROR_INTERNAL=Upp hefur komið innbyggð villa við keyrslu á LimeWire. Samt sem áður getur LimeWire lagað þessa villu og ætti að starfa eðlilega. Til að aðstoða okkur við villuleit, vinsamlega afritið eftirfarandi texta og sendið með tölvupósti á bugs@limewire.com.
 ERROR_THREE_CHARACTER_SEARCH=Leit verður að innihalda minnst þrjá stafi til að koma í veg fyrir stíflur á netkerfinu.
 ERROR_NETWORK_FLOODING=Þessi leit kann að fá mjög mörg svör og hægja á tengingunni. Viltu halda áfram?
 ERROR_BROWSE_FAILED=Gat ekki vafrað hjá viðkomandi hýsli. Hýsillinn er væntanlega ekki að taka við fleiri tengingum að svo stöddu.
@@ -1086,7 +1084,6 @@ OPTIONS_PORT_BOX_LABEL=Hlusta á porti:
 OPTIONS_FORCE_IP_TITLE=Fastsetja iptölu
 OPTIONS_FORCE_IP_LABEL=Gerir þér kleyft að fastsetja iptölu þína í samfélaginu ef þú er bak við eldvegg og vilt að aðrir notendur tengist henni án þess að senda 'push' skipun.
 OPTIONS_FORCE_IP_CHECK_BOX_LABEL=Fastsetja iptölu
-OPTIONS_FORCE_IP_IP_LABEL=Iptala:
 OPTIONS_FORCE_IP_PORT_LABEL=Port:
 
 ################################################################################
@@ -1329,8 +1326,6 @@ STATS_LIME_RECEIVED_BYTES_MULTICAST_MESSAGES_TITLE=Heildar
 SENT_MESSAGE_NUMBER=Fjöldi
 #??? SENT_MESSAGE_BYTES=Kilobytes
 SENT_LIMEWIRE=LimeWire spurninga
-SENT_ULTRAPEER=Ofurhálfbrú
-SENT_LEAF=Endahnútur
 
 LIME_SENT_MESSAGES_NUMBER=Fjöldi
 STATS_SENT_TCP=TCP
