--- a/lib/messagebundles/MessagesBundle_it.properties
+++ b/lib/messagebundles/MessagesBundle_it.properties
@@ -368,7 +368,6 @@ RESULT_PANEL_NAME=Nome
 RESULT_PANEL_TYPE=Tipo
 RESULT_PANEL_SIZE=Dimensione
 RESULT_PANEL_SPEED=Velocità
-RESULT_PANEL_SCORE=Punteggio
 RESULT_PANEL_CHAT=Conversa
 RESULT_PANEL_LOCATION=Posizione
 RESULT_PANEL_COUNT=#
@@ -471,9 +470,7 @@ DOWNLOAD_TIME_REMAINING_COLUMN=Tempo
 DOWNLOAD_SERVER_COLUMN=Fornitore/versione
 DOWNLOAD_STATUS_QUEUED=Messo in coda
 DOWNLOAD_STATUS_CONNECTING=Connessione...
-DOWNLOAD_STATUS_WAITING_START=Attendere 
-DOWNLOAD_STATUS_WAITING_MIDDLE=s perché 
-DOWNLOAD_STATUS_WAITING_END=occupato
+DOWNLOAD_STATUS_WAITING=Attendere perché occupato
 DOWNLOAD_STATUS_COMPLETE=Completo
 DOWNLOAD_STATUS_ABORTED=Abbandonato
 DOWNLOAD_STATUS_FAILED=Impossibile ricevere
@@ -1473,7 +1470,7 @@ STATS_TOTAL_RECEIVED_UDP_MESSAGES_TITLE=UDP
 #??? STATS_TOTAL_RECEIVED_UDP_MESSAGES_LABEL=All Gnutella messages received over UDP, by message type.
 STATS_TOTAL_RECEIVED_MULTICAST_MESSAGES_TITLE=Multicast
 #??? STATS_TOTAL_RECEIVED_MULTICAST_MESSAGES_LABEL=All Gnutella messages received over Multicast, by message type.
-STATS_RECEIVED_AL_TITLE=TCP, UDP o Multicast
+STATS_RECEIVED_ALL_TITLE=TCP, UDP o Multicast
 #??? STATS_RECEIVED_ALL_LABEL=Total Gnutella messages received over TCP, UDP or Multicast.
 #??? STATS_DUPLICATE_RECEIVED_TCP_QUERIES_TITLE=Duplicate TCP queries
 #??? STATS_DUPLICATE_RECEIVED_TCP_QUERIES_LABEL=Number of duplicate queries received over TCP versus the total number of queries.
@@ -1679,8 +1676,8 @@ STATS_TOTAL_SENT_BYTES_UDP_MESSAGES_TITLE=UDP
 #??? STATS_TOTAL_SENT_BYTES_UDP_MESSAGES_LABEL=Total kilobytes for Gnutella messages sent over UDP, by message type.
 STATS_TOTAL_SENT_BYTES_MULTICAST_MESSAGES_TITLE=Multicast
 #??? STATS_TOTAL_SENT_BYTES_MULTICAST_MESSAGES_LABEL=Total kilobytes for Gnutella messages sent over Multicast, by message type.
-STATS_SENT_BYTES_TCP_UDP_TITLE=TCP, UDP o Multicast
-#??? STATS_SENT_BYTES_TCP_UDP_LABEL=Total kilobytes for Gnutella messages sent over TCP, UDP or Multicast.
+STATS_SENT_BYTES_ALL_TITLE=TCP, UDP o Multicast
+#??? STATS_SENT_BYTES_ALL_LABEL=Total kilobytes for Gnutella messages sent over TCP, UDP or Multicast.
 
 # number of messages sent for LimeWire-specific stats -- TCP
 STATS_LIME_SENT_TCP_MESSAGES_TITLE=Totali
