--- a/lib/messagebundles/MessagesBundle_nl.properties
+++ b/lib/messagebundles/MessagesBundle_nl.properties
@@ -187,9 +187,6 @@ MENU_NAV_LIB_ACCESSIBLE=Ga naar het 'Mediatheek'-scherm
 
 MENU_VIEW_TITLE=Scherm
 MENU_VIEW_TITLE_MNEMONIC=S
-MENU_VIEW_SEARCH=Zoeken
-MENU_VIEW_SEARCH_MNEMONIC=Z
-MENU_VIEW_SEARCH_ACCESSIBLE=Zet het 'Zoeken'-scherm aan
 MENU_VIEW_MONITOR=Overzicht
 MENU_VIEW_MONITOR_MNEMONIC=O
 MENU_VIEW_MONITOR_ACCESSIBLE=Zet het 'Overzicht'-scherm aan
@@ -199,6 +196,9 @@ MENU_VIEW_CONNECTIONS_ACCESSIBLE=Zet het 'Verbindingen'-scherm aan
 MENU_VIEW_LIBRARY=Mediatheek
 MENU_VIEW_LIBRARY_MNEMONIC=M
 MENU_VIEW_LIBRARY_ACCESSIBLE=Zet het 'Mediatheek'-scherm aan
+MENU_VIEW_SEARCH_TITLE=Zoeken
+MENU_VIEW_SEARCH_TITLE_MNEMONIC=Z
+#??? MENU_VIEW_SEARCH_ACCESSIBLE=Search tab options
 
 MENU_RESOURCES_TITLE=Bronnen
 MENU_RESOURCES_TITLE_MNEMONIC=R
@@ -255,9 +255,6 @@ SEARCH_STOP_BUTTON_LABEL=Stop
 SEARCH_STOP_BUTTON_TIP=Stop met het weergeven van nieuwe zoekresultaten
 SEARCH_PUBLIC_KILL_STRING=Sluit zoekresultaten
 SEARCH_PUBLIC_STOP_STRING=Stop zoeken
-SEARCH_PUBLIC_VIEW_STRING=Weergave...
-SEARCH_PUBLIC_GROUP_STRING=Gegroepeerd
-SEARCH_PUBLIC_SHOW_META_STRING=Bekijk aantekening
 SEARCH_PUBLIC_BROWSE_STRING=Bestandsoverzicht gebruiker
 SEARCH_PUBLIC_CHAT_STRING=Chat met gebruiker
 SEARCH_PUBLIC_REPEAT_SEARCH_STRING=Herhaal zoekopdracht
@@ -287,7 +284,6 @@ RESULT_PANEL_NAME=Naam
 RESULT_PANEL_TYPE=Soort
 RESULT_PANEL_SIZE=Grootte
 RESULT_PANEL_SPEED=Snelheid
-RESULT_PANEL_SCORE=Waardering
 RESULT_PANEL_CHAT=Chat
 RESULT_PANEL_LOCATION=Locatie
 RESULT_PANEL_COUNT=Aantal
@@ -366,9 +362,7 @@ DOWNLOAD_TIME_REMAINING_COLUMN=Tijd
 DOWNLOAD_SERVER_COLUMN=Programma/versie
 DOWNLOAD_STATUS_QUEUED=Wachtrij
 DOWNLOAD_STATUS_CONNECTING=Bezig verbinding te maken met
-DOWNLOAD_STATUS_WAITING_START=Wachtende 
-DOWNLOAD_STATUS_WAITING_MIDDLE=s voor 
-DOWNLOAD_STATUS_WAITING_END= bezig
+DOWNLOAD_STATUS_WAITING=Wachtende voor bezig
 DOWNLOAD_STATUS_COMPLETE=Voltooid
 DOWNLOAD_STATUS_ABORTED=Afgebroken
 DOWNLOAD_STATUS_FAILED=Kan niet downloaden
@@ -677,18 +671,18 @@ UPDATE_LATER_TIP=Vernieuw LimeWire later
 MESSAGE_CAPTION=Bericht
 MESSAGE_ERROR_CAPTION=Fout
 MESSAGE_SHARE_SAVE_DIR=Wilt u de directory voor volledig ontvangen bestanden ook delen (inclusief de onderliggende directories)?
-MESSAGE_CONFIRM_DIRECTORY_DELETE=Weet u zeker dat u de volledige inhoud van deze directory wilt verwijderen?
 MESSAGE_CANNOT_UNSHARE_SUBDIRS=LimeWire kan het delen van onderliggende en gedeelde directories niet beëindigen.
 MESSAGE_OVERWRITE_EXISTING_FILE=Bestaand bestand wordt overschreven.
 MESSAGE_FILE_LAUNCHING_SECURITY_MESSAGE=LimeWire gaat voor de veiligheid dit bestand niet uitvoeren.
 MESSAGE_CONFIRM_FILE_DELETE=Weet u zeker dat u de geselecteerde bestanden wil verwijderen?
-MESSAGE_UNABLE_TO_DELETE_FILE_START=LimeWire kan dit bestand 
-MESSAGE_UNABLE_TO_DELETE_FILE_END= niet verwijderen. Misschien gebruikt een ander programma dit bestand op dit moment.
-MESSAGE_UNABLE_TO_DELETE_DIRECTORY_START=LimeWire kan deze 
-MESSAGE_UNABLE_TO_DELETE_DIRECTORY_END=directory niet verwijderen. Misschien gebruikt een ander programma de directory op dit moment.
-MESSAGE_UNABLE_TO_RENAME_FILE_START=LimeWire kan de naam van dit bestand 
-MESSAGE_UNABLE_TO_RENAME_FILE_END= niet wijzigen. Misschien gebruikt een ander programma het bestand.
-MESSAGE_INCOMPLETE_DIRECTORY_START=LimeWire staat U niet toe, de actie 
+MESSAGE_UNABLE_TO_DELETE_FILE_START=LimeWire kan dit bestand niet verwijderen:
+MESSAGE_UNABLE_TO_DELETE_FILE_END=. Misschien gebruikt een ander programma dit bestand op dit moment.
+MESSAGE_UNABLE_TO_DELETE_DIRECTORY_START=LimeWire kan deze directory niet verwijderen:
+MESSAGE_UNABLE_TO_RENAME_DIRECTORY_START=LimeWire kan de naam van deze directory niet wijzigen:
+MESSAGE_UNABLE_TO_CHANGE_DIRECTORY_END=. Misschien gebruikt een ander programma de directory op dit moment.
+MESSAGE_UNABLE_TO_RENAME_FILE_START=LimeWire kan de naam van dit bestand niet wijzigen:
+MESSAGE_UNABLE_TO_RENAME_FILE_END=. Misschien gebruikt een ander programma het bestand.
+MESSAGE_INCOMPLETE_DIRECTORY_START=LimeWire staat U niet toe, de actie
 MESSAGE_INCOMPLETE_DIRECTORY_END=uit te voeren op de directory gereserveerd voor incomplete bestanden.
 MESSAGE_INVALID_SAVE_DIRECTORY=LimeWire kan de gespecificeerde directory voor het opslaan van bestanden niet gebruiken. Kies een andere directory.
 MESSAGE_FILE_CORRUPT=LimeWire heeft een beschadiging van het bestand waargenomen: 
@@ -700,6 +694,8 @@ MESSAGE_CONTINUE_DOWNLOAD=Wilt u het downloaden voortzetten?
 ################################################################################
 INVALID_SAVE_DIR_LABEL=De opgegeven directory voor het opslaan van bestanden is ongeldig. Geef een nieuwe directory op, a.u.b.
 
+ERROR_INTERNAL_SERVLET=Er is een interne fout opgetreden bij een van de verbindingen. Desondanks gaan we gewoon door.
+
 ################################################################################
 # Key/Value pairs for error messages
 ################################################################################
@@ -709,7 +705,6 @@ ERROR_TOO_LOW_FOR_ULTRAPEER=Ultrapeers met vertakkingen moeten minstens zes verb
 ERROR_TOO_HIGH_FOR_LEAF=Vertakkingen hoeven maar een verbinding te hebben, omdat ze verbonden zijn aan een ultrapeer.
 ERROR_PORT=Er kan geen poort worden gevonden voor inkomende verbindingen.\nGeef een poort op in het configuratiescherm.
 ERROR_INCOMING_CONNECTIONS=Er is een probleem bij het vinden van inkomende verbindinen; we kappen er maar mee.
-ERROR_INTERNAL=Er is een interne fout opgetreden bij een van de verbindingen. Desondanks gaan we gewoon door. Help Limewire te verbeteren door onderstaande tekst te emailen naar <bugs@limewire.com>.
 ERROR_THREE_CHARACTER_SEARCH=De zoekterm moet minstens drie tekens bevatten, om het netwerk niet te overbelasten.
 ERROR_NETWORK_FLOODING=Deze zoekterm zal kunnen leiden tot heel veel resultaten. Desondanks toch maar doen?
 ERROR_BROWSE_FAILED=Het doorbladeren van de bestanden van deze gebruiker gaf problemen. Waarschijnlijk accepteert zijn computer geen inkomende verbindingen meer.
@@ -1089,7 +1084,6 @@ OPTIONS_PORT_BOX_LABEL=Poortnummer:
 OPTIONS_FORCE_IP_TITLE=Forceer lokaal IP adres
 OPTIONS_FORCE_IP_LABEL=Indien u zich achter een firewall bevindt, kan een IP adres worden geforceerd. Hierdoor hoeven andere Gnutella gebruikers geen "push request" te doen.
 OPTIONS_FORCE_IP_CHECK_BOX_LABEL=Forceer IP
-OPTIONS_FORCE_IP_IP_LABEL=Adres:
 OPTIONS_FORCE_IP_PORT_LABEL=Poort:
 
 ################################################################################
@@ -1198,7 +1192,7 @@ STATS_TOTAL_RECEIVED_UDP_MESSAGES_TITLE=UDP
 STATS_TOTAL_RECEIVED_MULTICAST_MESSAGES_TITLE=Multicast
 #??? STATS_TOTAL_RECEIVED_MULTICAST_MESSAGES_LABEL=All Gnutella messages received over Multicast, by message type.
 STATS_RECEIVED_ALL_TITLE=TCP, UDP of Multicast
-#??? STATS_RECEIVED_ALL_LABEL=Total Gnutella messages received over TCP or UDP.
+#??? STATS_RECEIVED_ALL_LABEL=Total Gnutella messages received over TCP, UDP or Multicast.
 #??? STATS_DUPLICATE_RECEIVED_TCP_QUERIES_TITLE=Duplicate TCP queries
 #??? STATS_DUPLICATE_RECEIVED_TCP_QUERIES_LABEL=Number of duplicate queries received over TCP versus the total number of queries.
 #??? STATS_DUPLICATE_RECEIVED_MULTICAST_QUERIES_TITLE=Duplicate Multicast queries
@@ -1332,8 +1326,6 @@ STATS_LIME_RECEIVED_BYTES_MULTICAST_MESSAGES_TITLE=Totaal
 SENT_MESSAGE_NUMBER=Aantal
 #??? SENT_MESSAGE_BYTES=Kilobytes
 SENT_LIMEWIRE=LimeWire berichten
-SENT_ULTRAPEER=Ultrapeer
-SENT_LEAF=Vertakking
 
 LIME_SENT_MESSAGES_NUMBER=Aantal
 STATS_SENT_TCP=TCP
@@ -1354,7 +1346,7 @@ STATS_TOTAL_SENT_UDP_MESSAGES_TITLE=UDP
 STATS_TOTAL_SENT_MULTICAST_MESSAGES_TITLE=Multicast
 #??? STATS_TOTAL_SENT_MULTICAST_MESSAGES_LABEL=All Gnutella messages sent over Multicast, by message type.
 STATS_SENT_ALL_TITLE=TCP, UDP of Multicast
-#??? STATS_SENT_ALL_LABEL=Total Gnutella messages sent over TCP or UDP.
+#??? STATS_SENT_ALL_LABEL=Total Gnutella messages sent over TCP, UDP or Multicast.
 
 # number of kilobytes
 #??? STATS_TOTAL_SENT_BYTES_MESSAGES_TITLE=Totaal
@@ -1365,8 +1357,8 @@ STATS_TOTAL_SENT_BYTES_UDP_MESSAGES_TITLE=UDP
 #??? STATS_TOTAL_SENT_BYTES_UDP_MESSAGES_LABEL=Total kilobytes for Gnutella messages sent over UDP, by message type.
 STATS_TOTAL_SENT_BYTES_MULTICAST_MESSAGES_TITLE=Multicast
 #??? STATS_TOTAL_SENT_BYTES_MULTICAST_MESSAGES_LABEL=Total kilobytes for Gnutella messages sent over Multicast, by message type.
-STATS_SENT_BYTES_TCP_UDP_TITLE=TCP, UDP of Multicast
-#??? STATS_SENT_BYTES_TCP_UDP_LABEL=Total kilobytes for Gnutella messages sent over TCP or UDP.
+STATS_SENT_BYTES_ALL_TITLE=TCP, UDP of Multicast
+#??? STATS_SENT_BYTES_ALL_LABEL=Total kilobytes for Gnutella messages sent over TCP, UDP or Multicast.
 
 # number of messages sent for LimeWire-specific stats -- TCP
 STATS_LIME_SENT_TCP_MESSAGES_TITLE=Totaal
