--- a/lib/messagebundles/MessagesBundle_no.properties
+++ b/lib/messagebundles/MessagesBundle_no.properties
@@ -92,7 +92,7 @@ APP_TITLE=LimeWire: Gjør deling av åpen informasjon mulig
 ABOUT_TITLE=Om LimeWire
 ABOUT_LABEL_START=LimeWire klient
 ABOUT_LABEL_ADDRESS=http://www.limewire.com
-ABOUT_LABEL_END=Copyright (c)2000-2003 Lime Wire LLC
+ABOUT_LABEL_END=Copyright (c)2000-2004 Lime Wire LLC
 ABOUT_LABEL_TITLE=Om LimeWire
 ABOUT_BUTTON_LABEL=OK
 ABOUT_BUTTON_TIP=Lukk Om vinduet.
@@ -245,6 +245,13 @@ MENU_HELP_ABOUT_MNEMONIC=O
 MENU_HELP_ABOUT_ACCESSIBLE=Informasjon om LimeWire.
 
 ################################################################################
+# Keys/value pairs for general tables info
+################################################################################
+TABLES_USE_ROWSTRIPE=Rad striper
+#??? TABLES_REAL_TIME_SORTING=Sort automatically
+#??? TABLES_DISPLAY_TOOLTIPS=Extended tooltips
+
+################################################################################
 # Keys/value pairs for SearchView stuff...
 ################################################################################
 SEARCH_DOWNLOAD_BUTTON_LABEL=Last ned
@@ -264,7 +271,6 @@ SEARCH_STOP_BUTTON_TIP=Stopp å samle søke resultat for valgte tab.
 SEARCH_PUBLIC_KILL_STRING=Lukk søk
 SEARCH_PUBLIC_LAUNCH_STRING=Utfør handling
 SEARCH_PUBLIC_STOP_STRING=Stopp søk
-SEARCH_PUBLIC_GROUP_STRING=Grupert
 SEARCH_PUBLIC_BROWSE_STRING=Utforsk vert
 SEARCH_PUBLIC_CHAT_STRING=Chat med vert
 SEARCH_PUBLIC_BITZI_LOOKUP_STRING=Bitzi web søk...
@@ -295,7 +301,6 @@ RESULT_PANEL_NAME=Navn
 RESULT_PANEL_TYPE=Type
 RESULT_PANEL_SIZE=Størrelse
 RESULT_PANEL_SPEED=Hastighet
-RESULT_PANEL_SCORE=Score
 RESULT_PANEL_CHAT=Chat
 RESULT_PANEL_LOCATION=Sted
 RESULT_PANEL_COUNT=#
@@ -374,9 +379,7 @@ DOWNLOAD_TIME_REMAINING_COLUMN=Tid
 DOWNLOAD_SERVER_COLUMN=Utvikler/versjon
 DOWNLOAD_STATUS_QUEUED=Plassert i kø
 DOWNLOAD_STATUS_CONNECTING=Kopler til...
-DOWNLOAD_STATUS_WAITING_START=venter
-DOWNLOAD_STATUS_WAITING_MIDDLE=s på
-DOWNLOAD_STATUS_WAITING_END=Opptatt
+DOWNLOAD_STATUS_WAITING=Venter på opptatt
 DOWNLOAD_STATUS_COMPLETE=Ferdig
 DOWNLOAD_STATUS_ABORTED=Avbrutt
 DOWNLOAD_STATUS_FAILED=Kunne ikke laste ned; venter på kilder
@@ -627,7 +630,7 @@ CHAT_YOU=Du
 # Key/value pairs for splash screen status text
 ###################################################################
 SPLASH_STATUS_RESOURCE_MANAGER=Laster ressurser...
-SPLASH_STATUS_SEARCH_WINDOTW=Laster søke vindu...
+SPLASH_STATUS_SEARCH_WINDOW=Laster søke vindu...
 SPLASH_STATUS_OPTIONS_WINDOW=Laster valg vindu...
 SPLASH_STATUS_USER_SETTINGS=Laster bruker oppsett...
 SPLASH_STATUS_SHARED_FILES=Laster delte filer...
@@ -691,11 +694,12 @@ MESSAGE_OVERWRITE_EXISTING_FILE=Overskriv eksisterende fil
 MESSAGE_FILE_LAUNCHING_SECURITY_MESSAGE=LimeWire vil ikke kjøre den spesifiserte filen av sikkerhetsmessige årsaker.
 MESSAGE_CONFIRM_FILE_DELETE=Er du sikker på at du vil slette den spesifisert filen(e)?
 MESSAGE_UNABLE_TO_DELETE_FILE_START=Ikke mulig å slette filen
-MESSAGE_UNABLE_TO_DELETE_FILE_END=Den kan være i bruk av et annet applikasjon.
+MESSAGE_UNABLE_TO_DELETE_FILE_END=. Den kan være i bruk av et annet applikasjon.
 MESSAGE_UNABLE_TO_DELETE_DIRECTORY_START=Ikke mulig å slette katalogen
-MESSAGE_UNABLE_TO_DELETE_DIRECTORY_END=. Den kan være i bruk av et annet applikasjon.
+MESSAGE_UNABLE_TO_RENAME_DIRECTORY_START=Ikke mulig å gi katalogen nytt navn
+MESSAGE_UNABLE_TO_CHANGE_DIRECTORY_END=. Den kan være i bruk av et annet applikasjon.
 MESSAGE_UNABLE_TO_RENAME_FILE_START=Ikke mulig å gi filen nytt navn
-MESSAGE_UNABLE_TO_RENAME_FILE_END=Den kan være i bruk av et annet applikasjon.
+MESSAGE_UNABLE_TO_RENAME_FILE_END=. Den kan være i bruk av et annet applikasjon.
 MESSAGE_INCOMPLETE_DIRECTORY_START=LimeWire vil ikke la deg
 MESSAGE_INCOMPLETE_DIRECTORY_END=Katalogen reservert uferdige filer.
 MESSAGE_INVALID_SAVE_DIRECTORY=LimeWire kunne ikke bruke den spesifiserte katalogen for lagring av filer. venligst prøv en annen katalog.
@@ -708,6 +712,8 @@ MESSAGE_CONTINUE_DOWNLOAD=Vil du fortsette nedlasting?
 ################################################################################
 INVALID_SAVE_DIR_LABEL=Den lagrete katalogen for å lagre filer er ikke gyldig. Vennligs skriv inn en ny katalog i katalog velgeren.
 
+ERROR_INTERNAL_SERVLET=Det har oppstått en intern feil ved kjøring av LimeWire. Men LimeWire kan komme seg fra feilen og bør yte normalit.
+
 ################################################################################
 # Key/Value pairs for error messages
 ################################################################################
@@ -717,7 +723,6 @@ ERROR_TOO_LOW_FOR_ULTRAPEER=Ultrapeers med løvnoder trenger minst seks koplinger
 ERROR_TOO_HIGH_FOR_LEAF=Løvnoder trenger bare en kopling, siden de er koplet til en UltraPeer.
 ERROR_PORT=Kunne ikke finne en port å bruke til innkommende koplinger.\nVennligst spesifiser en port fra konfigurasjons vinduet.
 ERROR_INCOMING_CONNECTIONS=Kunne ikke lytte til sokkel etter innkommende koplinger; avbryter.
-ERROR_INTERNAL=Det har oppstått en intern feil ved kjøring av LimeWire. Men LimeWire kan komme seg fra feilen og bør yte normalit. For å hjelpe oss med debugging, vennligst kopier denne teksten og send den til bugs@limewire.com.
 ERROR_THREE_CHARACTER_SEARCH=Søket ditt må være minst 3 karaktere for å unngå opphoping av nettverket.
 ERROR_NETWORK_FLOODING=Dette søket kan returnere velding mange resultat og sakte ned nettverket. Er du sikker på at du vil fortsette?
 ERROR_BROWSE_FAILED=Kunne ikke utforske filene på den forespørte verten. Denne maskinen aksepterer antageligis ikke flere innkommende koplinger.
@@ -773,7 +778,6 @@ OPTIONS_APPS_MAIN_TITLE=Hjelper apps
 OPTIONS_GUI_MAIN_TITLE=Syn
 OPTIONS_POPUPS_MAIN_TITLE=Popups
 OPTIONS_AUTOCOMPLETE_MAIN_TITLE=Autoavslutt tekst
-OPTIONS_ROW_STRIPE_MAIN_TITLE=Rad striper
 OPTIONS_THEME_MAIN_TITLE=Tema
 OPTIONS_SKIN_MAIN_TITLE=Skall
 OPTIONS_SEARCH_MAIN_TITLE=Søking
@@ -967,13 +971,6 @@ OPTIONS_AUTOCOMPLETE_LABEL=Du kan aktivére eller deaktivére autoavsluttning for 
 OPTIONS_AUTOCOMPLETE_DISPLAY_CHECK_BOX_LABEL=Aktivér autoavsluttning
 
 ################################################################################
-# Key/value pairs for the options pane used to enable and disable row striping
-################################################################################
-OPTIONS_ROW_STRIPE_TITLE=Rad striper
-OPTIONS_ROW_STRIPE_LABEL=Du kan akivere eller deaktivére striping av rader i tabeller.
-OPTIONS_ROW_STRIPE_DISPLAY_CHECK_BOX_LABEL=Aktivér rad striping
-
-################################################################################
 # Key/Value pairs for theme options
 ################################################################################
 OPTIONS_THEME_TITLE=Tema valg
@@ -1106,7 +1103,6 @@ OPTIONS_PORT_BOX_LABEL=Lytt på port:
 OPTIONS_FORCE_IP_TITLE=Tving lokal IP
 OPTIONS_FORCE_IP_LABEL=Tillater deg å tvinge din IP addresse om du er bak en brannmur og vil at andre gnutella klienter skal kunne kople seg til din maskin uten å sende et "push" forespørsel.
 OPTIONS_FORCE_IP_CHECK_BOX_LABEL=Tving IP
-OPTIONS_FORCE_IP_IP_LABEL=Addresse:
 OPTIONS_FORCE_IP_PORT_LABEL=Port:
 
 ################################################################################
@@ -1349,8 +1345,6 @@ SENT_MESSAGES=Sendt
 SENT_MESSAGE_NUMBER=Nummer
 SENT_MESSAGE_BYTES=Kilobytes
 SENT_LIMEWIRE=LimeWire meldinger
-SENT_ULTRAPEER=Ultrapeer
-SENT_LEAF=LøvNode
 
 LIME_SENT_MESSAGES_NUMBER=Nummer
 STATS_SENT_TCP=TCP
