--- a/lib/messagebundles/MessagesBundle_pt.properties
+++ b/lib/messagebundles/MessagesBundle_pt.properties
@@ -299,7 +299,6 @@ SEARCH_STOP_BUTTON_TIP=Parar de coletar resultados de pesquisa para a seção sele
 SEARCH_PUBLIC_KILL_STRING=Fechar pesquisa
 SEARCH_PUBLIC_LAUNCH_STRING=Executar ação
 SEARCH_PUBLIC_STOP_STRING=Parar pesquisa
-SEARCH_PUBLIC_GROUP_STRING=Agrupado
 SEARCH_PUBLIC_BROWSE_STRING=Procurar no host
 SEARCH_PUBLIC_CHAT_STRING=Bate-papo com o host
 SEARCH_PUBLIC_BITZI_LOOKUP_STRING=Busca Bitzi web...
@@ -330,7 +329,6 @@ RESULT_PANEL_NAME=Nome
 RESULT_PANEL_TYPE=Tipo
 RESULT_PANEL_SIZE=Tamanho
 RESULT_PANEL_SPEED=Velocidade
-RESULT_PANEL_SCORE=Pontuação
 RESULT_PANEL_CHAT=Bate-papo
 RESULT_PANEL_LOCATION=Locação
 RESULT_PANEL_COUNT=Nº
@@ -409,9 +407,7 @@ DOWNLOAD_TIME_REMAINING_COLUMN=Tempo
 DOWNLOAD_SERVER_COLUMN=Distribuidor/versão
 DOWNLOAD_STATUS_QUEUED=Na fila
 DOWNLOAD_STATUS_CONNECTING=Conectando...
-DOWNLOAD_STATUS_WAITING_START=Aguardando 
-DOWNLOAD_STATUS_WAITING_MIDDLE=s por 
-DOWNLOAD_STATUS_WAITING_END=ocupado
+DOWNLOAD_STATUS_WAITING=Aguardando por ocupado
 DOWNLOAD_STATUS_COMPLETE=Completado
 DOWNLOAD_STATUS_ABORTED=Abortado
 DOWNLOAD_STATUS_FAILED=Não foi possível baixar
@@ -725,13 +721,14 @@ MESSAGE_CANNOT_UNSHARE_SUBDIRS=LimeWire não pode parar o compartilhamento de sub
 MESSAGE_OVERWRITE_EXISTING_FILE=Substituir arquivo existente?
 MESSAGE_FILE_LAUNCHING_SECURITY_MESSAGE=LimeWire não irá executar o arquivo especificado por razões de segurança.
 MESSAGE_CONFIRM_FILE_DELETE=Tem certeza que quer apagar o(s) arquivo(s) selecionado(s)?
-MESSAGE_UNABLE_TO_DELETE_FILE_START=Incapaz de apagar o arquivo.
-MESSAGE_UNABLE_TO_DELETE_FILE_END=Ele pode estar em uso por outro aplicativo.
-MESSAGE_UNABLE_TO_DELETE_DIRECTORY_START=Incapaz de apagar o diretório.
-MESSAGE_UNABLE_TO_DELETE_DIRECTORY_END=Ele pode estar em uso por outro aplicativo.
-MESSAGE_UNABLE_TO_RENAME_FILE_START=Incapaz de renomear o arquivo.
-MESSAGE_UNABLE_TO_RENAME_FILE_END=Ele pode estar em uso por outro aplicativo.
-MESSAGE_INCOMPLETE_DIRECTORY_START=LimeWire não permitirá que você vá 
+MESSAGE_UNABLE_TO_DELETE_FILE_START=Incapaz de apagar o arquivo
+MESSAGE_UNABLE_TO_DELETE_FILE_END=. Ele pode estar em uso por outro aplicativo.
+MESSAGE_UNABLE_TO_DELETE_DIRECTORY_START=Incapaz de apagar o diretório
+MESSAGE_UNABLE_TO_RENAME_DIRECTORY_START=Incapaz de renomear o diretório
+MESSAGE_UNABLE_TO_CHANGE_DIRECTORY_END=. Ele pode estar em uso por outro aplicativo.
+MESSAGE_UNABLE_TO_RENAME_FILE_START=Incapaz de renomear o arquivo
+MESSAGE_UNABLE_TO_RENAME_FILE_END=. Ele pode estar em uso por outro aplicativo.
+MESSAGE_INCOMPLETE_DIRECTORY_START=LimeWire não permitirá que você vá
 MESSAGE_INCOMPLETE_DIRECTORY_END=à pasta reservada para os arquivos incompletos.
 MESSAGE_INVALID_SAVE_DIRECTORY=LimeWire foi incapaz de usar o diretório especificado para salvar arquivos. Por favor tente um diretório diferente.
 MESSAGE_FILE_CORRUPT=LimeWire detectou uma inconsistência no arquivo 
@@ -743,6 +740,8 @@ MESSAGE_CONTINUE_DOWNLOAD=Você quer continuar o download?
 ################################################################################
 INVALID_SAVE_DIR_LABEL=O diretório designado para salvar arquivos não é válido. Entre um novo diretório no navegador de diretórios, por favor.
 
+ERROR_INTERNAL_SERVLET=Houve um erro interno ao executar o LimeWire. Apesar disso, Lime Wire pode recuperar-se do erro e deverá funcionar normalmente.
+
 ################################################################################
 # Key/Value pairs for error messages
 ################################################################################
@@ -752,7 +751,6 @@ ERROR_TOO_LOW_FOR_ULTRAPEER='Ultrapeers' com 'Leaf Nodes' precisam de pelo menos
 ERROR_TOO_HIGH_FOR_LEAF='Leaves' somente precisam de uma conexão, já que estão conectados a um 'Ultrapeer'.
 ERROR_PORT=Não foi possível encontrar uma porta para usar para conexões de entrada.\nPor favor especifique uma porta na janela de configuração.
 ERROR_INCOMING_CONNECTIONS=Não foi possível escutar (listen) o 'socket' para conexões de entrada; abortando.
-ERROR_INTERNAL=Houve um erro interno ao executar o LimeWire. Apesar disso, Lime Wire pode recuperar-se do erro e deverá funcionar normalmente. Para nos ajudar com a depuração, copie o texto a seguir e envie por e-mail para bugs@limewire.com, por favor.
 ERROR_THREE_CHARACTER_SEARCH=Sua pesquisa deve ter pelo menos três caracteres para evitar o congestionamento da rede.
 ERROR_NETWORK_FLOODING=Esta pesquisa pode ter muitos resultados e deixar a rede lenta. Tem certeza que quer continuar?
 ERROR_BROWSE_FAILED=Não foi possível procurar no host solicitado. Este equipamento provavelmente não está mais aceitando conexões de entrada.
@@ -1132,7 +1130,6 @@ OPTIONS_PORT_BOX_LABEL=Porta de entrada:
 OPTIONS_FORCE_IP_TITLE=Forçar IP local
 OPTIONS_FORCE_IP_LABEL=Permite que você force seu endereço de IP se estiver sob um 'firewall' e quiser que outros clientes Gnutella conectem-se sem ter de enviar uma requisição (push request).
 OPTIONS_FORCE_IP_CHECK_BOX_LABEL=Forçar IP
-OPTIONS_FORCE_IP_IP_LABEL=Endereço:
 OPTIONS_FORCE_IP_PORT_LABEL=Porta:
 
 ################################################################################
@@ -1375,8 +1372,6 @@ STATS_RECEIVED_AVERAGE_LIME_MESSAGE_SIZE_TITLE=Mèdia tamanho
 SENT_MESSAGE_NUMBER=Número
 SENT_MESSAGE_BYTES=Kilobytes
 SENT_LIMEWIRE=Mensagens LimeWire
-SENT_ULTRAPEER=Ultrapeer
-SENT_LEAF=Leaf
 
 LIME_SENT_MESSAGES_NUMBER=Número
 STATS_SENT_TCP=TCP
@@ -1672,8 +1667,8 @@ QUERY_REPLY_ROUTE_ERRORS=Erros de reply
 PUSH_REQUEST_ROUTE_ERRORS=Erros de push
 
 # Advanced Gnutella Message routing errors Query replies
-??? HARD_LIMIT_QUERY_REPLY_ROUTE_ERRORS=Hard limit
-??? NO_ROUTE_QUERY_REPLY_ROUTE_ERRORS=No route
+#??? HARD_LIMIT_QUERY_REPLY_ROUTE_ERRORS=Hard limit
+#??? NO_ROUTE_QUERY_REPLY_ROUTE_ERRORS=No route
 
 # Advanced Gnutella Filtered messages
 ALL_FILTERED_MESSAGES=Mensagens recebidas
