--- a/lib/messagebundles/MessagesBundle_ro.properties
+++ b/lib/messagebundles/MessagesBundle_ro.properties
@@ -248,7 +248,6 @@ SEARCH_STOP_BUTTON_TIP=Opreste colectarea rezultatelor cautarilor
 SEARCH_PUBLIC_KILL_STRING=Opreste cautarea
 SEARCH_PUBLIC_LAUNCH_STRING=Lanseaza actiunea
 SEARCH_PUBLIC_STOP_STRING=Opreste cautarea
-SEARCH_PUBLIC_GROUP_STRING=Grupat
 SEARCH_PUBLIC_BROWSE_STRING=Rasfoieste gazda
 SEARCH_PUBLIC_CHAT_STRING=Discuta cu gazda
 SEARCH_PUBLIC_BITZI_LOOKUP_STRING=Cautare Bitzi Web...
@@ -278,7 +277,6 @@ RESULT_PANEL_NAME=Nume
 RESULT_PANEL_TYPE=Tip
 RESULT_PANEL_SIZE=Marime
 RESULT_PANEL_SPEED=Viteza
-RESULT_PANEL_SCORE=Scor
 RESULT_PANEL_CHAT=Discuta
 RESULT_PANEL_LOCATION=Locatie
 RESULT_PANEL_COUNT=Num.
@@ -353,9 +351,7 @@ DOWNLOAD_SPEED_COLUMN=Viteza
 DOWNLOAD_TIME_REMAINING_COLUMN=Timp
 DOWNLOAD_STATUS_QUEUED=In asteptare
 DOWNLOAD_STATUS_CONNECTING=Conectez...
-DOWNLOAD_STATUS_WAITING_START=Astept 
-DOWNLOAD_STATUS_WAITING_MIDDLE=pentru 
-DOWNLOAD_STATUS_WAITING_END=s ocupat
+DOWNLOAD_STATUS_WAITING=Astept pentru ocupat
 DOWNLOAD_STATUS_COMPLETE=Complet
 DOWNLOAD_STATUS_ABORTED=Renuntat
 DOWNLOAD_STATUS_FAILED=Nu se poate descarca
@@ -669,7 +665,8 @@ MESSAGE_CONFIRM_FILE_DELETE=Sunteti siguri ca doriti stergerea fisierului(elor) 
 MESSAGE_UNABLE_TO_DELETE_FILE_START=Nu pot sterge fisierul 
 MESSAGE_UNABLE_TO_DELETE_FILE_END=. Posibil sa fie in uz de catre alta aplicatie.
 MESSAGE_UNABLE_TO_DELETE_DIRECTORY_START=Nu pot sterge directorul 
-MESSAGE_UNABLE_TO_DELETE_DIRECTORY_END=. Posibil sa fie in uz de catre alta aplicatie.
+MESSAGE_UNABLE_TO_RENAME_DIRECTORY_START=Nu pot redenumi directorul 
+MESSAGE_UNABLE_TO_CHANGE_DIRECTORY_END=. Posibil sa fie in uz de catre alta aplicatie.
 MESSAGE_UNABLE_TO_RENAME_FILE_START=Nu pot redenumi fisierul 
 MESSAGE_UNABLE_TO_RENAME_FILE_END=. Posibil sa fie in uz de catre alta aplicatie.
 MESSAGE_INCOMPLETE_DIRECTORY_START=LimeWire nu va permite sa 
@@ -684,6 +681,8 @@ MESSAGE_CONTINUE_DOWNLOAD=Doriti sa continuati descarcarea ?
 ################################################################################
 #??? INVALID_SAVE_DIR_LABEL=The stored directory for saving files is not valid. Please enter a new directory in the directory chooser.
 
+ERROR_INTERNAL_SERVLET=A avut loc o eroare interna. LimeWire se poate recupera singur si continua normal.
+
 ################################################################################
 # Key/Value pairs for error messages
 ################################################################################
@@ -693,7 +692,6 @@ ERROR_TOO_LOW_FOR_ULTRAPEER=Pentru noduri de Intermediere sunt necesare cel puti
 ERROR_TOO_HIGH_FOR_LEAF=Plecarea necesita doar o conexiune, din moment ce sunt legati la un intermediator.
 ERROR_PORT=Nu pot gasi un port pentru conexiunile solicitate.\nSpecificati un port din fereastra de configurare.
 ERROR_INCOMING_CONNECTIONS=Nu se poate asculta socket-ul pentru conexiuni primite; renunt.
-ERROR_INTERNAL=A avut loc o eroare interna. LimeWire se poate recupera singur si continua normal. Pentru a ne ajuta sa eliminam erorile, copiati textul urmator si trimiteti-l pe mail la adresa bugs@limewire.com .
 ERROR_THREE_CHARACTER_SEARCH=Cautarea trebuie sa contina cel putin 3 caractere pentru a se evita congestionarea retelei.
 ERROR_NETWORK_FLOODING=Aceasta cautare poate avea multe rezultate si incetini reteaua. Sunteti sigur ca doriti sa continuati ?
 ERROR_BROWSE_FAILED=Nu pot rasfoi fisierele din gazda ceruta. Probabil nu mai sunt acceptate alte conexiuni.
@@ -743,7 +741,7 @@ OPTIONS_CONNECTIONS_MAIN_TITLE=Conexiuni
 OPTIONS_SHUTDOWN_MAIN_TITLE=Inchide
 OPTIONS_CHAT_MAIN_TITLE=Discuta
 OPTIONS_PLAYER_MAIN_TITLE=Player
-OPTIONS_BROWSER_MAIN_TITLE=Browser
+#??? OPTIONS_BROWSER_MAIN_TITLE=Helper apps
 #??? OPTIONS_THEME_MAIN_TITLE=Theme
 OPTIONS_SKIN_MAIN_TITLE=Interfata
 OPTIONS_SEARCH_MAIN_TITLE=Caut
@@ -908,8 +906,6 @@ OPTIONS_PLAYER_PREFERENCE_LABEL=Se poate folosi player-ul intern sau cel implici
 OPTIONS_BROWSER_PREFERENCE_TITLE=Optiunile browser-ului
 OPTIONS_BROWSER_PREFERENCE_LABEL=Poti stbili ce browser va fi folosit.
 OPTIONS_BROWSER_BOX_LABEL=Browser
-OPTIONS_BROWSER_DEFAULT_BUTTON_LABEL=Browser implicit
-OPTIONS_BROWSER_DEFAULT_BUTTON_TIP=Foloseste browser-ul implicit
 
 ################################################################################
 # Key/Value pairs for theme options
@@ -1036,7 +1032,6 @@ OPTIONS_PORT_BOX_LABEL=Asculta port-ul:
 OPTIONS_FORCE_IP_TITLE=Forteaza IP-ul local
 OPTIONS_FORCE_IP_LABEL=Permite fortarea adresei IP daca sunteti in spatele unui firewall si doriti ca alti utilizatori sa se conecteze fara a trimite o cerere de fortare.
 OPTIONS_FORCE_IP_CHECK_BOX_LABEL=Forteaza IP
-OPTIONS_FORCE_IP_IP_LABEL=Adresa:
 OPTIONS_FORCE_IP_PORT_LABEL=Port:
 
 ################################################################################
@@ -1140,8 +1135,8 @@ STATS_TOTAL_RECEIVED_TCP_MESSAGES_TITLE=TCP
 #??? STATS_TOTAL_RECEIVED_TCP_MESSAGES_LABEL=All Gnutella messages received over TCP, by message type.
 STATS_TOTAL_RECEIVED_UDP_MESSAGES_TITLE=UDP
 #??? STATS_TOTAL_RECEIVED_UDP_MESSAGES_LABEL=All Gnutella messages received over UDP, by message type.
-STATS_RECEIVED_TCP_UDP_TITLE=TCP si UDP
-#??? STATS_RECEIVED_TCP_UDP_LABEL=Total Gnutella messages received over TCP or UDP.
+STATS_RECEIVED_ALL_TITLE=TCP, UDP si Multicast
+#??? STATS_RECEIVED_ALL_LABEL=Total Gnutella messages received over TCP, UDP or Multicast.
 #??? STATS_DUPLICATE_RECEIVED_TCP_QUERIES_TITLE=Duplicate TCP queries
 #??? STATS_DUPLICATE_RECEIVED_TCP_QUERIES_LABEL=Number of duplicate queries received over TCP versus the total number of queries.
 # Advanced Gnutella Message hops/ttl for queries
@@ -1162,8 +1157,8 @@ STATS_TOTAL_RECEIVED_BYTES_TCP_MESSAGES_TITLE=TCP
 #??? STATS_TOTAL_RECEIVED_BYTES_TCP_MESSAGES_LABEL=Total kilobytes for Gnutella messages received over TCP, by message type.
 STATS_TOTAL_RECEIVED_BYTES_UDP_MESSAGES_TITLE=UDP
 #??? STATS_TOTAL_RECEIVED_BYTES_UDP_MESSAGES_LABEL=Total kilobytes for Gnutella messages received over UDP, by message type.
-STATS_RECEIVED_BYTES_TCP_UDP_TITLE=TCP si UDP
-#??? STATS_RECEIVED_BYTES_TCP_UDP_LABEL=Total kilobytes for Gnutella messages received over TCP or UDP.
+STATS_RECEIVED_BYTES_ALL_TITLE=TCP, UDP si Multicast
+#??? STATS_RECEIVED_BYTES_ALL_LABEL=Total kilobytes for Gnutella messages received over TCP, UDP or Multicast.
 #??? STATS_DUPLICATE_RECEIVED_BYTES_TCP_QUERIES_TITLE=Duplicate TCP queries
 #??? STATS_DUPLICATE_RECEIVED_BYTES_TCP_QUERIES_LABEL=Total kilobytes in duplicate queries received over TCP versus the total number of queries.
 # Advanced Gnutella Message hops/ttl for queries in kilobytes
@@ -1258,8 +1253,8 @@ STATS_TOTAL_SENT_TCP_MESSAGES_TITLE=TCP
 #??? STATS_TOTAL_SENT_TCP_MESSAGES_LABEL=All Gnutella messages sent over TCP, by message type.
 STATS_TOTAL_SENT_UDP_MESSAGES_TITLE=UDP
 #??? STATS_TOTAL_SENT_UDP_MESSAGES_LABEL=All Gnutella messages sent over UDP, by message type.
-STATS_SENT_TCP_UDP_TITLE=TCP si UDP
-#??? STATS_SENT_TCP_UDP_LABEL=Total Gnutella messages sent over TCP or UDP.
+STATS_SENT_ALL_TITLE=TCP, UDP si Multicast
+#??? STATS_SENT_ALL_LABEL=Total Gnutella messages sent over TCP, UDP or Multicast.
 
 # number of kilobytes
 STATS_TOTAL_SENT_BYTES_MESSAGES_TITLE=Total
@@ -1268,8 +1263,8 @@ STATS_TOTAL_SENT_BYTES_TCP_MESSAGES_TITLE=TCP
 #??? STATS_TOTAL_SENT_BYTES_TCP_MESSAGES_LABEL=Total kilobytes for Gnutella messages sent over TCP, by message type.
 STATS_TOTAL_SENT_BYTES_UDP_MESSAGES_TITLE=UDP
 #??? STATS_TOTAL_SENT_BYTES_UDP_MESSAGES_LABEL=Total kilobytes for Gnutella messages sent over UDP, by message type.
-STATS_SENT_BYTES_TCP_UDP_TITLE=TCP si UDP
-#??? STATS_SENT_BYTES_TCP_UDP_LABEL=Total kilobytes for Gnutella messages sent over TCP or UDP.
+STATS_SENT_BYTES_ALL_TITLE=TCP, UDP si Multicast
+#??? STATS_SENT_BYTES_ALL_LABEL=Total kilobytes for Gnutella messages sent over TCP, UDP or Multicast.
 
 # number of messages sent for LimeWire-specific stats -- TCP
 STATS_LIME_SENT_TCP_MESSAGES_TITLE=Total
