--- a/lib/messagebundles/MessagesBundle_sv.properties
+++ b/lib/messagebundles/MessagesBundle_sv.properties
@@ -253,7 +253,6 @@ SEARCH_STOP_BUTTON_TIP=Avbryt sökning för vald flik
 SEARCH_PUBLIC_KILL_STRING=Stäng sökning
 SEARCH_PUBLIC_LAUNCH_STRING=Utför åtgärd
 SEARCH_PUBLIC_STOP_STRING=Avbryt sökning
-SEARCH_PUBLIC_GROUP_STRING=Grupperad
 SEARCH_PUBLIC_BROWSE_STRING=Bläddra värd
 SEARCH_PUBLIC_CHAT_STRING=Chatta med värd
 SEARCH_PUBLIC_BITZI_LOOKUP_STRING=Slå upp på webben med Bitzi...
@@ -284,7 +283,6 @@ RESULT_PANEL_NAME=Namn
 RESULT_PANEL_TYPE=Typ
 RESULT_PANEL_SIZE=Storlek
 RESULT_PANEL_SPEED=Hastighet
-RESULT_PANEL_SCORE=Poäng
 RESULT_PANEL_CHAT=Chat
 RESULT_PANEL_LOCATION=Belägenhet
 RESULT_PANEL_COUNT=Antal
@@ -363,9 +361,7 @@ DOWNLOAD_TIME_REMAINING_COLUMN=Tid
 DOWNLOAD_SERVER_COLUMN=Tillverkare/version
 DOWNLOAD_STATUS_QUEUED=Köad
 DOWNLOAD_STATUS_CONNECTING=Ansluter...
-DOWNLOAD_STATUS_WAITING_START=Väntar 
-DOWNLOAD_STATUS_WAITING_MIDDLE=s på 
-DOWNLOAD_STATUS_WAITING_END=upptagen
+DOWNLOAD_STATUS_WAITING=Väntar på upptagen
 DOWNLOAD_STATUS_COMPLETE=Färdig
 DOWNLOAD_STATUS_ABORTED=Avbruten
 DOWNLOAD_STATUS_FAILED=Kunde inte nedladdas
@@ -682,7 +678,8 @@ MESSAGE_CONFIRM_FILE_DELETE=Är du säker på att du vill radera den/de markerade f
 MESSAGE_UNABLE_TO_DELETE_FILE_START=Kan inte radera filen 
 MESSAGE_UNABLE_TO_DELETE_FILE_END=. Den kan användas av ett annat program.
 MESSAGE_UNABLE_TO_DELETE_DIRECTORY_START=Kan inte radera mappen 
-MESSAGE_UNABLE_TO_DELETE_DIRECTORY_END=. Den kan användas av ett annat program.
+MESSAGE_UNABLE_TO_RENAME_DIRECTORY_START=Kan inte döpa om mappen 
+MESSAGE_UNABLE_TO_CHANGE_DIRECTORY_END=. Den kan användas av ett annat program.
 MESSAGE_UNABLE_TO_RENAME_FILE_START=Kan inte döpa om filen 
 MESSAGE_UNABLE_TO_RENAME_FILE_END=. Den kan användas av ett annat program.
 MESSAGE_INCOMPLETE_DIRECTORY_START=LimeWire tillåter inte att du 
@@ -697,6 +694,8 @@ MESSAGE_CONTINUE_DOWNLOAD=Vill du fortsätta nedladdningen?
 ################################################################################
 INVALID_SAVE_DIR_LABEL=Den angivna mappen för sparade filer är felaktig. Var god ange en ny mapp i mappväljaren.
 
+ERROR_INTERNAL_SERVLET=Det har inträffat ett internt fel i LimeWire. LimeWire kan normalt återhämta sig och fortsätta.
+
 ################################################################################
 # Key/Value pairs for error messages
 ################################################################################
@@ -706,7 +705,6 @@ ERROR_TOO_LOW_FOR_ULTRAPEER=En 'Ultrapeer' med undernoder behöver minst sex ansl
 ERROR_TOO_HIGH_FOR_LEAF=Undernoder behöver endast en anslutning eftersom de ansluter mot en 'Ultrapeer'.
 ERROR_PORT=Kunde ej hitta en port för inkommande anslutningar.\nVar god ange en från inställningsfönstret.
 ERROR_INCOMING_CONNECTIONS=Kunde ej lyssna på socket för inkommande anslutningar; avbryter.
-ERROR_INTERNAL=Det har inträffat ett internt fel i LimeWire. LimeWire kan normalt återhämta sig och fortsätta. För att hjälpa till med felsökning var vänlig kopiera följande text och eposta den till bugs@limewire.com.
 ERROR_THREE_CHARACTER_SEARCH=En sökning måste vara minst tre tecken för att undvika överbelastning av nätverket.
 ERROR_NETWORK_FLOODING=Denna sökning kan resultera i många resultat som kan överbelasta nätverket. Är du säker på att du vill fortsätta?
 ERROR_BROWSE_FAILED=Kunde ej bläddra filer på den valda värden. Troligtvis accepterar värden inte fler anslutningar.
@@ -1086,7 +1084,6 @@ OPTIONS_PORT_BOX_LABEL=Avlyssna port:
 OPTIONS_FORCE_IP_TITLE=Tvinga lokal IP
 OPTIONS_FORCE_IP_LABEL=Tillåter dig att tvinga din IP adress om du är bakom en brandvägg och vill låta andra gnutella klienter ansluta utan att sända "push request".
 OPTIONS_FORCE_IP_CHECK_BOX_LABEL=Tvinga IP
-OPTIONS_FORCE_IP_IP_LABEL=Adress:
 OPTIONS_FORCE_IP_PORT_LABEL=Port:
 
 ################################################################################
@@ -1220,8 +1217,8 @@ STATS_TOTAL_RECEIVED_BYTES_UDP_MESSAGES_TITLE=UDP
 #??? STATS_TOTAL_RECEIVED_BYTES_UDP_MESSAGES_LABEL=Total kilobytes for Gnutella messages received over UDP, by message type.
 STATS_TOTAL_RECEIVED_BYTES_MULTICAST_MESSAGES_TITLE=Multicast
 #??? STATS_TOTAL_RECEIVED_BYTES_MULTICAST_MESSAGES_LABEL=Total kilobytes for Gnutella messages received over Multicast, by message type.
-STATS_RECEIVED_BYTES_TCP_UDP_TITLE=TCP, UDP eller Multicast
-#??? STATS_RECEIVED_BYTES_TCP_UDP_LABEL=Total kilobytes for Gnutella messages received over TCP, UDP or Multicast.
+STATS_RECEIVED_BYTES_ALL_TITLE=TCP, UDP eller Multicast
+#??? STATS_RECEIVED_BYTES_ALL_LABEL=Total kilobytes for Gnutella messages received over TCP, UDP or Multicast.
 #??? STATS_DUPLICATE_RECEIVED_BYTES_TCP_QUERIES_TITLE=Duplicate TCP queries
 #??? STATS_DUPLICATE_RECEIVED_BYTES_TCP_QUERIES_LABEL=Total kilobytes in duplicate queries received over TCP versus the total number of queries.
 STATS_DUPLICATE_RECEIVED_BYTES_MULTICAST_QUERIES_TITLE=Duplicate Multicast queries
@@ -1329,8 +1326,6 @@ STATS_LIME_RECEIVED_BYTES_MULTICAST_MESSAGES_TITLE=Totalt
 SENT_MESSAGE_NUMBER=Antal
 #??? SENT_MESSAGE_BYTES=Kilobytes
 SENT_LIMEWIRE=LimeWire meddelanden
-SENT_ULTRAPEER=Ultrapeer
-SENT_LEAF=Undernod
 
 LIME_SENT_MESSAGES_NUMBER=Antal
 STATS_SENT_TCP=TCP
