--- a/lib/messagebundles/MessagesBundle_tr.properties
+++ b/lib/messagebundles/MessagesBundle_tr.properties
@@ -93,7 +93,7 @@ APP_TITLE=LimeWire: enabling open information sharing
 ABOUT_TITLE=LimeWire hakk\u0131nda
 ABOUT_LABEL_START=LimeWire \u0131stemcisi
 ABOUT_LABEL_ADDRESS=http://www.limewire.com
-ABOUT_LABEL_END=Telif hakk\u0131 (c)2000-2003 Lime Wire LLC
+ABOUT_LABEL_END=Telif hakk\u0131 (c)2000-2004 Lime Wire LLC
 ABOUT_LABEL_TITLE=LimeWire hakk\u0131nda
 ABOUT_BUTTON_LABEL=Tamam
 ABOUT_BUTTON_TIP=Hakk\u0131nda penceresini kapat\u0131r.
@@ -254,7 +254,6 @@ SEARCH_STOP_BUTTON_TIP=Se\u00e7ili sekmede arama sonu\u00e7lar\u0131n\u0131 biri
 SEARCH_PUBLIC_KILL_STRING=Aramay\u0131 kapat
 SEARCH_PUBLIC_LAUNCH_STRING=Eylemi ba\u015flat
 SEARCH_PUBLIC_STOP_STRING=Aramay\u0131 durdur
-SEARCH_PUBLIC_GROUP_STRING=Gruplanm\u0131\u015f
 SEARCH_PUBLIC_BROWSE_STRING=Kona\u011fa g\u00f6zat
 SEARCH_PUBLIC_CHAT_STRING=Konakla sohbet et
 SEARCH_PUBLIC_BITZI_LOOKUP_STRING=Bitzi web arama...
@@ -285,7 +284,6 @@ RESULT_PANEL_NAME=\u0130sim
 RESULT_PANEL_TYPE=T\u00fcr
 RESULT_PANEL_SIZE=Boyut
 RESULT_PANEL_SPEED=H\u0131z
-RESULT_PANEL_SCORE=Skor
 RESULT_PANEL_CHAT=Sohbet
 RESULT_PANEL_LOCATION=Konum
 RESULT_PANEL_COUNT=#
@@ -364,9 +362,7 @@ DOWNLOAD_TIME_REMAINING_COLUMN=S\u00fcre
 DOWNLOAD_SERVER_COLUMN=Sat\u0131c\u0131/S\u00fcr\u00fcm
 DOWNLOAD_STATUS_QUEUED=S\u0131raland\u0131
 DOWNLOAD_STATUS_CONNECTING=Ba\u011flan\u0131yor...
-DOWNLOAD_STATUS_WAITING_START=Bekleniyor
-DOWNLOAD_STATUS_WAITING_MIDDLE=s,
-DOWNLOAD_STATUS_WAITING_END=me\u015fgul
+DOWNLOAD_STATUS_WAITING=Bekleniyor, me\u015fgul
 DOWNLOAD_STATUS_COMPLETE=Tamamland\u0131
 DOWNLOAD_STATUS_ABORTED=Yar\u0131da kesildi
 DOWNLOAD_STATUS_FAILED=\u0130ndirilemedi
@@ -681,11 +677,12 @@ MESSAGE_OVERWRITE_EXISTING_FILE=Mevcut dosyan\u0131n \u00fczerine yaz
 MESSAGE_FILE_LAUNCHING_SECURITY_MESSAGE=LimeWire, g\u00fcvenlik nedenlerinden dolay\u0131 belirtilen dosyay\u0131 i\u015fletmeyecek.
 MESSAGE_CONFIRM_FILE_DELETE=Se\u00e7ili dosya(lar)\u0131 silmek istedi\u011finizden emin misiniz?
 MESSAGE_UNABLE_TO_DELETE_FILE_START=Dosya silinemedi:
-MESSAGE_UNABLE_TO_DELETE_FILE_END=Ba\u015fka bir uygulama taraf\u0131ndan kullan\u0131l\u0131yor olabilir.
+MESSAGE_UNABLE_TO_DELETE_FILE_END=. Ba\u015fka bir uygulama taraf\u0131ndan kullan\u0131l\u0131yor olabilir.
 MESSAGE_UNABLE_TO_DELETE_DIRECTORY_START=Dizin silinemedi:
-MESSAGE_UNABLE_TO_DELETE_DIRECTORY_END=. Ba\u015fka bir uygulama taraf\u0131ndan kullan\u0131l\u0131yor olabilir.
+MESSAGE_UNABLE_TO_RENAME_DIRECTORY_START=Dizin yeniden adland\u0131r\u0131lamad\u0131:
+MESSAGE_UNABLE_TO_CHANGE_DIRECTORY_END=. Ba\u015fka bir uygulama taraf\u0131ndan kullan\u0131l\u0131yor olabilir.
 MESSAGE_UNABLE_TO_RENAME_FILE_START=Dosya yeniden adland\u0131r\u0131lamad\u0131:
-MESSAGE_UNABLE_TO_RENAME_FILE_END=Ba\u015fka bir uygulama taraf\u0131ndan kullan\u0131l\u0131yor olabilir.
+MESSAGE_UNABLE_TO_RENAME_FILE_END=. Ba\u015fka bir uygulama taraf\u0131ndan kullan\u0131l\u0131yor olabilir.
 MESSAGE_INCOMPLETE_DIRECTORY_START=LimeWire tamamlanmam\u0131\u015f dosyalar i\u00e7in ayr\u0131lm\u0131\u015f
 MESSAGE_INCOMPLETE_DIRECTORY_END=klas\u00f6re girmenize izin vermeyecek.
 MESSAGE_INVALID_SAVE_DIRECTORY=LimeWire belirtilen dizini, dosyalar\u0131 kaydetmek i\u00e7in kullanam\u0131yor. L\u00fctfen ba\u015fka bir dizin deneyiniz.
@@ -698,6 +695,8 @@ MESSAGE_CONTINUE_DOWNLOAD=\u0130ndirmeyi s\u00fcrd\u00fcrmek istiyor musunuz?
 ################################################################################
 INVALID_SAVE_DIR_LABEL=Dosyalar\u0131 kaydetmek i\u00e7in depolanan dizin ge\u00e7erli de\u011fil. L\u00fctfen dizin se\u00e7iciden yeni bir dizin girin.
 
+ERROR_INTERNAL_SERVLET=LimeWire y\u00fcr\u00fctmede dahili bir hata olu\u015ftu. Ancak LimeWire hatadan kurtulabilmeli ve normal bir ba\u015far\u0131m sergilemelidir.
+
 ################################################################################
 # Key/Value pairs for error messages
 ################################################################################
@@ -707,7 +706,6 @@ ERROR_TOO_LOW_FOR_ULTRAPEER=Yaprak d\u00fc\u011f\u00fcml\u00fc Ultrapeer'lerin e
 ERROR_TOO_HIGH_FOR_LEAF=Yapraklar, bir Ultrapeer'e ba\u011fl\u0131 olduklar\u0131ndan, yaln\u0131zca bir ba\u011flant\u0131ya ihtiya\u00e7lar\u0131 vard\u0131r.
 ERROR_PORT=Gelen ba\u011flant\u0131lar i\u00e7in kullanmak \u00fczere port bulunamad\u0131.\nL\u00fctfen yap\u0131land\u0131rma penceresinden bir port belirtin.
 ERROR_INCOMING_CONNECTIONS=Gelen ba\u011flant\u0131lar i\u00e7in soket dinlenemedi; yar\u0131da kesiliyor.
-ERROR_INTERNAL=LimeWire y\u00fcr\u00fctmede dahili bir hata olu\u015ftu. Ancak LimeWire hatadan kurtulabilmeli ve normal bir ba\u015far\u0131m sergilemelidir. Yaz\u0131l\u0131m hata ay\u0131klamas\u0131nda bize yard\u0131m etmek i\u00e7in, l\u00fctfen a\u015fa\u011f\u0131daki metni kopyalay\u0131p bugs@limewire.com'a e-postalay\u0131n.
 ERROR_THREE_CHARACTER_SEARCH=Araman\u0131z, a\u011f\u0131 \u015fi\u015firmekten ka\u00e7\u0131nmak i\u00e7in, en az \u00fc\u00e7 karakterli olmal\u0131d\u0131r.
 ERROR_NETWORK_FLOODING=Bu arama \u00e7ok say\u0131da sonu\u00e7 d\u00f6nd\u00fcrebilir ve a\u011f\u0131 yava\u015flatabilir. Devam etmek istedi\u011finizden emin misiniz?
 ERROR_BROWSE_FAILED=\u0130stenen konaktaki dosyalara g\u00f6zat\u0131lam\u0131yor. Bu makina muhtemelen daha fazla ba\u011flant\u0131 kabul etmiyor.
@@ -1087,7 +1085,6 @@ OPTIONS_PORT_BOX_LABEL=Dinleme portu:
 OPTIONS_FORCE_IP_TITLE=B\u00f6lgesel iP'yi zorla
 OPTIONS_FORCE_IP_LABEL=Bir ate\u015f duvar\u0131 arkas\u0131ndaysan\u0131z ve di\u011fer Gnutella istemcilerinin bir itme istemi (Push request) g\u00f6ndermeksizin ba\u011flanmas\u0131n\u0131 isterseniz iP adresinizi zorlaman\u0131za izin verir.
 OPTIONS_FORCE_IP_CHECK_BOX_LABEL=IP'yi zorla
-OPTIONS_FORCE_IP_IP_LABEL=Adres:
 OPTIONS_FORCE_IP_PORT_LABEL=Port:
 
 ################################################################################
@@ -1123,7 +1120,7 @@ STATS_ADVANCED_PANE_LABEL=\u0130leri d\u00fczey istatistikler, Gnutella iletiler
 STATS_ADVANCED_CHECK_BOX_LABEL=\u0130leri d\u00fczey \u0131statistikleri g\u00f6ster:
 
 # Advanced Gnutella messages panes
-Gnutella_MESSAGES=Gnutella
+GNUTELLA_MESSAGES=Gnutella
 
 ###################################################################
 # Key/value pairs for network state statistics panel
@@ -1330,8 +1327,6 @@ SENT_MESSAGES=G\u00f6nderilen
 SENT_MESSAGE_NUMBER=Say\u0131
 SENT_MESSAGE_BYTES=Kilobayt
 SENT_LIMEWIRE=LimeWire \u0131letileri
-SENT_ULTRAPEER=Ultrapeer
-SENT_LEAF=Yaprak
 
 LIME_SENT_MESSAGES_NUMBER=Say\u0131
 STATS_SENT_TCP=TCP
