--- a/lib/messagebundles/MessagesBundle_zh.properties
+++ b/lib/messagebundles/MessagesBundle_zh.properties
@@ -92,7 +92,7 @@ APP_TITLE=LimeWire: \u8fd0\u884c\u5728 Gnutella \u7f51\u7edc
 ABOUT_TITLE=\u5173\u4e8e LimeWire
 ABOUT_LABEL_START=LimeWire \u5ba2\u6237\u7aef, \u7248\u672c
 ABOUT_LABEL_ADDRESS=http://www.limewire.com
-ABOUT_LABEL_END=\u7248\u6743 \u6240\u6709 (c)2000-2003 Lime Wire LLC
+ABOUT_LABEL_END=\u7248\u6743 \u6240\u6709 (c)2000-2004 Lime Wire LLC
 ABOUT_LABEL_TITLE=\u5173\u4e8e LimeWire
 ABOUT_BUTTON_LABEL=\u786e\u5b9a
 ABOUT_BUTTON_TIP=\u5173\u95ed \u5173\u95ed \u7a97\u53e3
@@ -253,7 +253,6 @@ SEARCH_STOP_BUTTON_TIP=\u505c\u6b62 \u6536\u96c6\u68c0\u7d22 \u7ed3\u679c
 SEARCH_PUBLIC_KILL_STRING=\u5173\u95ed \u641c\u7d22
 SEARCH_PUBLIC_LAUNCH_STRING=\u8fd0\u884c
 SEARCH_PUBLIC_STOP_STRING=\u505c\u6b62 \u641c\u7d22
-SEARCH_PUBLIC_GROUP_STRING=\u805a\u5408
 SEARCH_PUBLIC_BROWSE_STRING=\u6d4f\u89c8 \u5bf9\u65b9 \u4e3b\u673a
 SEARCH_PUBLIC_CHAT_STRING=\u548c\u5bf9\u65b9 \u804a\u5929
 SEARCH_PUBLIC_BITZI_LOOKUP_STRING=Bitzi \u7f51 \u67e5\u627e...
@@ -284,7 +283,6 @@ RESULT_PANEL_NAME=\u540d\u79f0
 RESULT_PANEL_TYPE=\u7c7b\u578b
 RESULT_PANEL_SIZE=\u5927\u5c0f
 RESULT_PANEL_SPEED=\u901f\u5ea6
-RESULT_PANEL_SCORE=\u79ef\u5206
 RESULT_PANEL_CHAT=\u804a\u5929
 RESULT_PANEL_LOCATION=\u4f4d\u7f6e
 RESULT_PANEL_COUNT=#
@@ -363,9 +361,7 @@ DOWNLOAD_TIME_REMAINING_COLUMN=\u65f6\u95f4
 DOWNLOAD_SERVER_COLUMN=\u8f6f\u4ef6 / \u7248\u672c
 DOWNLOAD_STATUS_QUEUED=\u7b49\u5019
 DOWNLOAD_STATUS_CONNECTING=\u8fde\u63a5\u4e2d...
-DOWNLOAD_STATUS_WAITING_START=\u7b49\u5f85
-DOWNLOAD_STATUS_WAITING_MIDDLE=\u79d2 \u56e0\u4e3a
-DOWNLOAD_STATUS_WAITING_END=\u7e41\u5fd9
+DOWNLOAD_STATUS_WAITING=\u7b49\u5f85\u56e0\u4e3a\u7e41\u5fd9
 DOWNLOAD_STATUS_COMPLETE=\u5b8c\u6210
 DOWNLOAD_STATUS_ABORTED=\u653e\u5f03
 DOWNLOAD_STATUS_FAILED=\u4e0b\u8f7d \u5931\u8d25
@@ -378,7 +374,6 @@ DOWNLOAD_STATUS_WAITING_FOR_REQUERY_END=\u79d2 \u8fd4\u56de \u7ed3\u679c
 DOWNLOAD_HOSTS_LABEL=\u4e3b\u673a
 #??? DOWNLOAD_STATUS_REMOTE_QUEUED=Remotely queued at position 
 DOWNLOAD_STATUS_HASHING=\u6838\u5b9e\u4e2d \u8fd9\u4e2a \u6587\u4ef6\u7684 \u5185\u5bb9
-Verifying file contents...
 DOWNLOAD_STATUS_SAVING=\u4fdd\u5b58\u4e2d \u6587\u4ef6...
 
 ###################################################################
@@ -680,11 +675,12 @@ MESSAGE_OVERWRITE_EXISTING_FILE=\u8986\u76d6 \u5df2\u5b58\u5728\u7684 \u6587\u4e
 MESSAGE_FILE_LAUNCHING_SECURITY_MESSAGE=\u56e0\u4e3a\u5b89\u5168\u7684 \u539f\u56e0, LimeWire \u5c06\u4e0d\u4f1a\u8fd0\u884c\u6307\u5b9a\u7684 \u6587\u4ef6.
 MESSAGE_CONFIRM_FILE_DELETE=\u4f60 \u786e\u8ba4\u8981 \u5220\u9664 \u9009\u4e2d\u7684 \u6587\u4ef6 \u5417?
 MESSAGE_UNABLE_TO_DELETE_FILE_START=\u4e0d\u80fd \u5220\u9664 \u6b64 \u6587\u4ef6
-MESSAGE_UNABLE_TO_DELETE_FILE_END=\u5b83\u53ef\u80fd \u6b63\u5728 \u88ab\u522b\u7684 \u7a0b\u5e8f \u4f7f\u7528.
+MESSAGE_UNABLE_TO_DELETE_FILE_END=. \u5b83\u53ef\u80fd \u6b63\u5728 \u88ab\u522b\u7684 \u7a0b\u5e8f \u4f7f\u7528.
 MESSAGE_UNABLE_TO_DELETE_DIRECTORY_START=\u4e0d\u80fd \u5220\u9664 \u6b64 \u6587\u4ef6\u5939
-MESSAGE_UNABLE_TO_DELETE_DIRECTORY_END=. \u5b83\u53ef\u80fd \u6b63\u5728 \u88ab\u522b\u7684 \u7a0b\u5e8f \u4f7f\u7528.
+MESSAGE_UNABLE_TO_RENAME_DIRECTORY_START=\u4e0d\u80fd \u91cd\u547d\u540d \u6b64 \u6587\u4ef6\u5939
+MESSAGE_UNABLE_TO_CHANGE_DIRECTORY_END=. \u5b83\u53ef\u80fd \u6b63\u5728 \u88ab\u522b\u7684 \u7a0b\u5e8f \u4f7f\u7528.
 MESSAGE_UNABLE_TO_RENAME_FILE_START=\u4e0d\u80fd \u91cd\u547d\u540d \u6b64 \u6587\u4ef6
-MESSAGE_UNABLE_TO_RENAME_FILE_END=\u5b83\u53ef\u80fd \u6b63\u5728 \u88ab\u522b\u7684 \u7a0b\u5e8f \u4f7f\u7528.
+MESSAGE_UNABLE_TO_RENAME_FILE_END=. \u5b83\u53ef\u80fd \u6b63\u5728 \u88ab\u522b\u7684 \u7a0b\u5e8f \u4f7f\u7528.
 MESSAGE_INCOMPLETE_DIRECTORY_START=LimeWire \u4e0d\u5141\u8bb8 \u4f60
 MESSAGE_INCOMPLETE_DIRECTORY_END=\u4fdd\u7559\u7ed9\u672a\u5b8c\u5168 \u4e0b\u8f7d\u7684 \u6587\u4ef6\u5939.
 MESSAGE_INVALID_SAVE_DIRECTORY=LimeWire \u4e0d\u80fd \u591f \u4f7f\u7528 \u6307\u5b9a\u7684 \u4fdd\u5b58 \u6587\u4ef6\u5939. \u8bf7 \u9009\u62e9 \u53e6 \u4e00\u4e2a \u6587\u4ef6\u5939.
@@ -698,6 +694,21 @@ MESSAGE_CONTINUE_DOWNLOAD=\u4f60 \u60f3\u7ee7\u7eed \u4e0b\u8f7d \u5417?
 INVALID_SAVE_DIR_LABEL=\u4fdd\u5b58 \u6587\u4ef6\u7684 \u6587\u4ef6\u5939 \u975e\u6cd5. \u8bf7\u5728 \u9009\u62e9 \u65b0\u7684 \u6587\u4ef6\u5939.
 
 ################################################################################
+# Key/Value pairs for internal error messages
+################################################################################
+#??? ERROR_INTERNAL_TITLE=Internal error
+#??? ERROR_INTERNAL_SERVLET=LimeWire \u5b58\u5728 \u4e00\u4e2a \u5185\u90e8 \u9519\u8bef. \u4f46\u662f, LimeWire \u80fd \u4ece \u9519\u8bef\u4e2d \u6062\u590d\u5e76\u4e14\u5e94\u8be5\u6b63\u5e38\u6267\u884c. To aid with debugging, please click 'Send' to notify LimeWire about the problem. If desired, you can click 'Review' to look at the information that will be sent. Thank you.
+#??? ERROR_INTERNAL_SEND=Send
+#??? ERROR_INTERNAL_REVIEW=Review
+#??? ERROR_INTERNAL_DISCARD=Discard
+#??? ERROR_INTERNAL_COPY=Copy report
+#??? ERROR_INTERNAL_OK=\u786e\u5b9a
+#??? ERROR_INTERNAL_ALWAYS_SEND=Always send immediately
+#??? ERROR_INTERNAL_ALWAYS_REVIEW=Always ask for review
+#??? ERROR_INTERNAL_ALWAYS_DISCARD=Always discard bugs
+#??? ERROR_INTERNAL_SERVLET_FAILED=LimeWire was unable to connect to the bug server in order to send the below bug report. To aid in debugging, please copy the following text and email it to bugs@limewire.com. Thank you.
+
+################################################################################
 # Key/Value pairs for error messages
 ################################################################################
 ERROR_PORT_UNAVAILABLE=\u7aef\u53e3 \u4e0d\u53ef\u63d0\u4f9b. \u8bf7 \u9009\u62e9 \u4e00\u4e2a \u4e0d\u540c\u7684 \u7aef\u53e3.
@@ -706,7 +717,6 @@ ERROR_TOO_LOW_FOR_ULTRAPEER=\u6709\u53f6\u8282\u70b9\u7684 \u8d85\u7ea7 \u8282\u
 ERROR_TOO_HIGH_FOR_LEAF=\u53f6\u5b50 \u8282\u70b9 \u53ea \u9700\u8981 \u4e00\u4e2a \u8fde\u63a5, \u4ed6\u4eec \u8fde\u63a5 \u4e00 \u8d85\u7ea7 \u8282\u70b9.
 ERROR_PORT=\u4e0d\u80fd \u627e\u5230 \u4e00\u4e2a \u7aef\u53e3 \u4e3a\u8fdb\u6765\u7684 \u8fde\u63a5 \u4f7f\u7528.\n\u8bf7 \u4ece \u7ed3\u6784 \u7a97\u53e3 \u6307\u5b9a \u4e00\u4e2a \u7aef\u53e3.
 ERROR_INCOMING_CONNECTIONS=\u4e0d\u80fd \u4e3a\u8fdb\u6765\u7684 \u8fde\u63a5 \u76d1\u542c \u63d2\u53e3; \u4e2d\u6b62.
-ERROR_INTERNAL=LimeWire \u5b58\u5728 \u4e00\u4e2a \u5185\u90e8 \u9519\u8bef. \u4f46\u662f, LimeWire \u80fd \u4ece \u9519\u8bef\u4e2d \u6062\u590d\u5e76\u4e14\u5e94\u8be5\u6b63\u5e38\u6267\u884c. \u4e3a\u4e86 \u5e2e\u52a9\u6211\u4eec\u505a\u8c03\u8bd5, \u8bf7\u590d\u5236\u4ee5\u4e0b\u7684 \u6b63\u6587\u548c\u7535\u5b50\u90ae\u4ef6\u5b83\u7ed9 bugs@limewire.com.
 ERROR_THREE_CHARACTER_SEARCH=\u4f60 \u5fc5\u987b\u952e\u5165\u81f3\u5c11 3 \u4e2a\u5b57\u7b26, \u4ece \u800c\u907f\u514d\u963b\u585e \u7f51\u7edc.
 ERROR_NETWORK_FLOODING=\u8fd9\u79cd \u641c\u7d22 \u53ef\u80fd \u4f1a\u8fd4\u56de \u8bb8\u591a \u7ed3\u679c \u4ece \u800c\u4f7f \u7f51\u7edc \u53d8\u6162. \u4f60 \u60f3\u7ee7\u7eed \u5417?
 ERROR_BROWSE_FAILED=\u4e0d\u80fd \u6d4f\u89c8 \u4e3b\u673a \u6587\u4ef6. \u6b64\u673a\u5668 \u4e0d\u80fd \u63a5 \u6536\u8fc7\u591a\u7684 \u8fde\u63a5.
@@ -757,7 +767,6 @@ OPTIONS_CONNECTIONS_MAIN_TITLE=\u8fde\u63a5
 OPTIONS_SHUTDOWN_MAIN_TITLE=\u5173\u95ed
 OPTIONS_CHAT_MAIN_TITLE=\u804a\u5929
 OPTIONS_PLAYER_MAIN_TITLE=\u64ad\u653e\u5668
-OPTIONS_BROWSER_MAIN_TITLE=\u6d4f\u89c8\u5668
 #??? OPTIONS_APPS_MAIN_TITLE=Helper apps
 #??? OPTIONS_GUI_MAIN_TITLE=User interface
 #??? OPTIONS_POPUPS_MAIN_TITLE=Popups
@@ -875,7 +884,7 @@ OPTIONS_UPLOAD_BANDWIDTH_SLIDER_LABEL_LABEL=\u4e0a\u8f7d \u5e26\u5bbd:
 OPTIONS_UPLOAD_MAX_TITLE=\u6700\u5927 \u4e0a\u8f7d \u69fd
 OPTIONS_UPLOAD_MAX_LABEL=\u4e0d\u5141\u8bb8 \u8d85\u8fc7 \u6b64 \u6570\u76ee\u7684 \u4e0a\u8f7d. \u8fd9\u4e2a\u503c \u53ea \u6709\u5728 \u5e26\u5bbd \u8db3\u591f\u65f6\u624d\u80fd \u8fbe\u5230.
 OPTIONS_UPLOAD_MAX_NUMBER_LABEL=\u6700\u5927 \u4e0a\u8f7d \u69fd:
-\u6700\u591a \u4e0b\u8f7d \u6570:
+
 ################################################################################
 # Key/Value pairs for the options for the soft maximum number of uploads
 ################################################################################
@@ -1086,7 +1095,6 @@ OPTIONS_PORT_BOX_LABEL=\u76d1\u542c \u7aef\u53e3:
 OPTIONS_FORCE_IP_TITLE=\u5f3a\u5236 \u672c\u5730 IP
 OPTIONS_FORCE_IP_LABEL=\u5982\u679c \u4f60 \u5728 \u9632\u706b\u5899\u7684 \u540e\u9762\u800c\u60f3\u8ba9\u5176\u4ed6 Gnutella \u5ba2\u6237\u4e0d \u53d1\u9001 \u201c\u63a8\u201d \u8bf7\u6c42\u7684 \u8bdd, \u5c31\u8bf7 \u4f60 \u5f3a\u5236 \u8bbe\u7f6e \u4f60 \u5730 IP \u5730\u5740.
 OPTIONS_FORCE_IP_CHECK_BOX_LABEL=\u5f3a\u5236 IP
-OPTIONS_FORCE_IP_IP_LABEL=\u5730\u5740:
 OPTIONS_FORCE_IP_PORT_LABEL=\u7aef\u53e3 \u53f7:
 
 ################################################################################
@@ -1329,8 +1337,6 @@ SENT_MESSAGES=\u53d1\u9001\u7684 \u6d88\u606f
 SENT_MESSAGE_NUMBER=\u6d88\u606f \u6570
 SENT_MESSAGE_BYTES=KB
 SENT_LIMEWIRE=\u53ea \u5230 LimeWire \u5ba2\u6237\u7aef
-SENT_ULTRAPEER=Ultrapeer
-SENT_LEAF=\u53f6\u5b50
 
 LIME_SENT_MESSAGES_NUMBER=\u6d88\u606f \u6570
 STATS_SENT_TCP=TCP \u6d88\u606f
@@ -1350,8 +1356,8 @@ STATS_TOTAL_SENT_UDP_MESSAGES_TITLE=UDP \u6d88\u606f
 #??? STATS_TOTAL_SENT_UDP_MESSAGES_LABEL=All Gnutella messages sent over UDP, by message type.
 STATS_TOTAL_SENT_MULTICAST_MESSAGES_TITLE=Multicast \u6d88\u606f
 #??? STATS_TOTAL_SENT_MULTICAST_MESSAGES_LABEL=All Gnutella messages sent over Multicast, by message type.
-STATS_SENT_TCP_UDP_TITLE=TCP, UDP \u6216 Multicast
-#??? STATS_SENT_TCP_UDP_LABEL=Total Gnutella messages sent over TCP, UDP or Multicast.
+STATS_SENT_ALL_TITLE=TCP, UDP \u6216 Multicast
+#??? STATS_SENT_ALL_LABEL=Total Gnutella messages sent over TCP, UDP or Multicast.
 
 # number of kilobytes
 STATS_TOTAL_SENT_BYTES_MESSAGES_TITLE=\u603b\u4ef7
@@ -1362,8 +1368,8 @@ STATS_TOTAL_SENT_BYTES_UDP_MESSAGES_TITLE=UDP \u6d88\u606f
 #??? STATS_TOTAL_SENT_BYTES_UDP_MESSAGES_LABEL=Total kilobytes for Gnutella messages sent over UDP, by message type.
 STATS_TOTAL_SENT_BYTES_MULTICAST_MESSAGES_TITLE=Multicast \u6d88\u606f
 #??? STATS_TOTAL_SENT_BYTES_MULTICAST_MESSAGES_LABEL=Total kilobytes for Gnutella messages sent over Multicast, by message type.
-STATS_SENT_BYTES_TCP_UDP_TITLE=TCP, UDP \u6216 Multicast
-#??? STATS_SENT_BYTES_TCP_UDP_LABEL=Total kilobytes for Gnutella messages sent over TCP, UDP or Multicast.
+STATS_SENT_BYTES_ALL_TITLE=TCP, UDP \u6216 Multicast
+#??? STATS_SENT_BYTES_ALL_LABEL=Total kilobytes for Gnutella messages sent over TCP, UDP or Multicast.
 
 # number of messages sent for LimeWire-specific stats -- TCP
 STATS_LIME_SENT_TCP_MESSAGES_TITLE=\u603b\u4ef7
