--- a/lib/messagebundles/MessagesBundle_es.properties
+++ b/lib/messagebundles/MessagesBundle_es.properties
@@ -151,9 +151,6 @@ MENU_FILE_LIBRARY_ADD_SHARED_FOLDER_ACCESSIBLE=Añadir una carpeta que le gustarí
 MENU_FILE_LIBRARY_NEW_FOLDER=Nueva carpeta
 MENU_FILE_LIBRARY_NEW_FOLDER_MNEMONIC=N
 MENU_FILE_LIBRARY_NEW_FOLDER_ACCESSIBLE=Añadir una carpeta a la carpeta de biblioteca seleccionada
-MENU_FILE_LIBRARY_DELETE_FOLDER=Borrar carpeta
-MENU_FILE_LIBRARY_DELETE_FOLDER_MNEMONIC=B
-MENU_FILE_LIBRARY_DELETE_FOLDER_ACCESSIBLE=Borrar la carpeta de biblioteca seleccionada
 MENU_FILE_LIBRARY_RENAME_FOLDER=Renombrar carpeta
 MENU_FILE_LIBRARY_RENAME_FOLDER_MNEMONIC=R
 MENU_FILE_LIBRARY_RENAME_FOLDER_ACCESSIBLE=Renombrar la carpeta de biblioteca seleccionada
@@ -253,7 +250,6 @@ SEARCH_STOP_BUTTON_TIP=Parar de recoger resultados de búsqueda para la solapa se
 SEARCH_PUBLIC_KILL_STRING=Cerrar búsqueda
 #??? SEARCH_PUBLIC_LAUNCH_STRING=Launch action
 SEARCH_PUBLIC_STOP_STRING=Parar búsqueda
-SEARCH_PUBLIC_GROUP_STRING=Agrupar
 SEARCH_PUBLIC_BROWSE_STRING=Navegar la máquina
 SEARCH_PUBLIC_CHAT_STRING=Charlar con la máquina
 SEARCH_PUBLIC_BITZI_LOOKUP_STRING=Consultar en la web de Bitzi...
@@ -284,7 +280,6 @@ RESULT_PANEL_NAME=Nombre
 RESULT_PANEL_TYPE=Tipo
 RESULT_PANEL_SIZE=Tamaño
 RESULT_PANEL_SPEED=Velocidad
-RESULT_PANEL_SCORE=Marcador
 RESULT_PANEL_CHAT=Charla
 RESULT_PANEL_LOCATION=Situación
 RESULT_PANEL_COUNT=Nº
@@ -363,9 +358,7 @@ DOWNLOAD_TIME_REMAINING_COLUMN=Tiempo
 DOWNLOAD_SERVER_COLUMN=Vendedor/versión
 DOWNLOAD_STATUS_QUEUED=Encolado
 DOWNLOAD_STATUS_CONNECTING=Conectando a 
-DOWNLOAD_STATUS_WAITING_START=Esperando 
-DOWNLOAD_STATUS_WAITING_MIDDLE=s para 
-DOWNLOAD_STATUS_WAITING_END=ocupado
+DOWNLOAD_STATUS_WAITING=Esperando para ocupado
 DOWNLOAD_STATUS_COMPLETE=Completo
 DOWNLOAD_STATUS_ABORTED=Abortado
 DOWNLOAD_STATUS_FAILED=No se pudo descargar
@@ -674,17 +667,17 @@ UPDATE_LATER_TIP=Actualizar LimeWire mas tarde
 MESSAGE_CAPTION=Mensaje
 MESSAGE_ERROR_CAPTION=Error
 MESSAGE_SHARE_SAVE_DIR=¿Le guatría añadir el directorio de guardar a la lista de directorios compartidos? Los subdirectorios de este directorio también se compartirán.
-MESSAGE_CONFIRM_DIRECTORY_DELETE=¿Está seguro de que desea borrar este directorio y todos sus contenidos permanentemente de su sistema?
 MESSAGE_CANNOT_UNSHARE_SUBDIRS=LimeWire no puede dejar de compartir subdirectorios de directorios que están compartidos.
 MESSAGE_OVERWRITE_EXISTING_FILE=Sobreescribir el archivo existente
 MESSAGE_FILE_LAUNCHING_SECURITY_MESSAGE=LimeWire no lanzará el archivo especificado por razones de seguridad.
 MESSAGE_CONFIRM_FILE_DELETE=¿Está seguro de que desea borrar el/los archivo(s) seleccionado(s)?
 MESSAGE_UNABLE_TO_DELETE_FILE_START=No se puede borrar el archivo
-MESSAGE_UNABLE_TO_DELETE_FILE_END=Podría estar en uso por parte de otra aplicación.
+MESSAGE_UNABLE_TO_DELETE_FILE_END=. Podría estar en uso por parte de otra aplicación.
 MESSAGE_UNABLE_TO_DELETE_DIRECTORY_START=No se puede borrar el directorio
-MESSAGE_UNABLE_TO_DELETE_DIRECTORY_END=Podría estar en uso por parte de otra aplicación.
+MESSAGE_UNABLE_TO_RENAME_DIRECTORY_START=No se puede renombrar el directorio
+MESSAGE_UNABLE_TO_CHANGE_DIRECTORY_END=. Podría estar en uso por parte de otra aplicación.
 MESSAGE_UNABLE_TO_RENAME_FILE_START=No se puede renombrar el archivo
-MESSAGE_UNABLE_TO_RENAME_FILE_END=Podría estar en uso por parte de otra aplicación.
+MESSAGE_UNABLE_TO_RENAME_FILE_END=. Podría estar en uso por parte de otra aplicación.
 MESSAGE_INCOMPLETE_DIRECTORY_START=LimeWire no le permitirá borrar
 MESSAGE_INCOMPLETE_DIRECTORY_END=la carpeta reservada para archivos incompletos.
 MESSAGE_INVALID_SAVE_DIRECTORY=LimeWire no pudo utilizar el directorio especificado para guardar archivos. Por favor pruebe con un directorio diferente.
@@ -697,6 +690,8 @@ MESSAGE_CONTINUE_DOWNLOAD=¿Quiere continuar la descarga?
 ################################################################################
 #??? INVALID_SAVE_DIR_LABEL=The stored directory for saving files is not valid. Please enter a new directory in the directory chooser.
 
+ERROR_INTERNAL_SERVLET=Ha habido un error interno manejando una conexión. No obstante, Limewire puede recuperarse del error y debería funcionar normalmente.
+
 ################################################################################
 # Key/Value pairs for error messages
 ################################################################################
@@ -706,7 +701,6 @@ ERROR_TOO_LOW_FOR_ULTRAPEER=Los UltraPeers con nodos hoja necesitan al menos sei
 ERROR_TOO_HIGH_FOR_LEAF=Las hojas solamente necesitan una conexión, puesto que están conectadas a un UltraPeer.
 ERROR_PORT=No se puede encontrar un puerto a utilizar para conexiones entrantes.\nPor favor especifique un puerto desde la ventana de configuración.
 ERROR_INCOMING_CONNECTIONS=No se pueden escuchar conectores (sockets) en conexiones entrantes; abortando.
-ERROR_INTERNAL=Ha habido un error interno manejando una conexión. No obstante, Limewire puede recuperarse del error y debería funcionar normalmente. Para ayudarnos con la depuración, por favor copie el siguiente texto y envíelo por correo electrónico a bugs@limewire.com.
 ERROR_THREE_CHARACTER_SEARCH=La búsqueda debe tener al menos tres caracteres para evitar congestionar la red.
 ERROR_NETWORK_FLOODING=Esta búsqueda puede tener cantidad de resultados y ralentizar la red. ¿Está seguro de que desea continuar?
 ERROR_BROWSE_FAILED=No se puede navegar por archivos en la máquina solicitada. Esta máquina probablemente no acepta mas conexiones entrantes.
@@ -1086,7 +1080,6 @@ OPTIONS_PORT_BOX_LABEL=Escuchar en el puerto:
 OPTIONS_FORCE_IP_TITLE=Forzar IP local
 OPTIONS_FORCE_IP_LABEL=Le permite forzar su dirección IP si está tras un cortafuegos y le gustaría que otros clientes gnutella conectaran sin tener que enviar una petición por empuje (push).
 OPTIONS_FORCE_IP_CHECK_BOX_LABEL=Forzar IP
-OPTIONS_FORCE_IP_IP_LABEL=Dirección:
 OPTIONS_FORCE_IP_PORT_LABEL=Puerto:
 
 ################################################################################
@@ -1329,8 +1322,6 @@ STATS_RECEIVED_AVERAGE_LIME_MESSAGE_SIZE_TITLE=Media tamaño
 SENT_MESSAGE_NUMBER=Número
 SENT_MESSAGE_BYTES=Kilobytes
 SENT_LIMEWIRE=Mensajes LimeWire
-SENT_ULTRAPEER=Ultrapeer
-SENT_LEAF=Hoja
 
 LIME_SENT_MESSAGES_NUMBER=Número
 STATS_SENT_TCP=TCP
@@ -1626,8 +1617,8 @@ QUERY_REPLY_ROUTE_ERRORS=Errores de Reply
 PUSH_REQUEST_ROUTE_ERRORS=Errores de Push
 
 # Advanced Gnutella Message routing errors Query replies
-??? HARD_LIMIT_QUERY_REPLY_ROUTE_ERRORS=Hard limit
-??? NO_ROUTE_QUERY_REPLY_ROUTE_ERRORS=No route
+#??? HARD_LIMIT_QUERY_REPLY_ROUTE_ERRORS=Hard limit
+#??? NO_ROUTE_QUERY_REPLY_ROUTE_ERRORS=No route
 
 # Advanced Gnutella Filtered messages
 ALL_FILTERED_MESSAGES=Mensajes descartados
