--- a/lib/messagebundles/MessagesBundle_pl.properties
+++ b/lib/messagebundles/MessagesBundle_pl.properties
@@ -264,7 +264,6 @@ SEARCH_STOP_BUTTON_TIP=Przerwij gromadzenie wynik\u00f3w poszukiwa\u0144 dla wyb
 SEARCH_PUBLIC_KILL_STRING=Zamknij szukanie
 SEARCH_PUBLIC_LAUNCH_STRING=Rozpocznij czynno\u015b\u0107
 SEARCH_PUBLIC_STOP_STRING=Przerwij szukanie
-SEARCH_PUBLIC_GROUP_STRING=Zgrupowane
 SEARCH_PUBLIC_BROWSE_STRING=Przegl\u0105danie hosta
 SEARCH_PUBLIC_CHAT_STRING=Rozpocznij czata z hostem
 SEARCH_PUBLIC_BITZI_LOOKUP_STRING=Zajrzyj na Bitzi Web...
@@ -295,7 +294,6 @@ RESULT_PANEL_NAME=Nazwa pliku
 RESULT_PANEL_TYPE=Typ
 RESULT_PANEL_SIZE=Rozmiar
 RESULT_PANEL_SPEED=\u0141\u0105cze
-RESULT_PANEL_SCORE=Wynik
 RESULT_PANEL_CHAT=Czat
 RESULT_PANEL_LOCATION=Lokalizacja
 RESULT_PANEL_COUNT=#
@@ -374,9 +372,7 @@ DOWNLOAD_TIME_REMAINING_COLUMN=Czas
 DOWNLOAD_SERVER_COLUMN=Producent/wersja
 DOWNLOAD_STATUS_QUEUED=Skolejkowane
 DOWNLOAD_STATUS_CONNECTING=\u0141\u0105czenie...
-DOWNLOAD_STATUS_WAITING_START=Oczekiwanie 
-DOWNLOAD_STATUS_WAITING_MIDDLE=na 
-DOWNLOAD_STATUS_WAITING_END=zaj\u0119to\u015b\u0107
+DOWNLOAD_STATUS_WAITING=Oczekiwanie na zaj\u0119to\u015b\u0107
 DOWNLOAD_STATUS_COMPLETE=Zako\u0144czone
 DOWNLOAD_STATUS_ABORTED=Porzucone
 DOWNLOAD_STATUS_FAILED=Pobranie nie by\u0142o mo\u017cliwe
@@ -693,7 +689,8 @@ MESSAGE_CONFIRM_FILE_DELETE=Czy na pewno chcesz skasowa\u0107?
 MESSAGE_UNABLE_TO_DELETE_FILE_START=Nie uda\u0142o si\u0119 skasowa\u0107 pliku 
 MESSAGE_UNABLE_TO_DELETE_FILE_END=. By\u0107 mo\u017ce jest u\u017cywany przez inn\u0105 aplikacj\u0119.
 MESSAGE_UNABLE_TO_DELETE_DIRECTORY_START=Nie uda\u0142o si\u0119 skasowa\u0107 katalogu 
-MESSAGE_UNABLE_TO_DELETE_DIRECTORY_END=. By\u0107 mo\u017ce jest u\u017cywany przez inn\u0105 aplikacj\u0119.
+MESSAGE_UNABLE_TO_RENAME_DIRECTORY_START=Nie uda\u0142o si\u0119 zmieni\u0107 nazwy katalogu
+MESSAGE_UNABLE_TO_CHANGE_DIRECTORY_END=. By\u0107 mo\u017ce jest u\u017cywany przez inn\u0105 aplikacj\u0119.
 MESSAGE_UNABLE_TO_RENAME_FILE_START=Nie uda\u0142o si\u0119 zmieni\u0107 nazwy pliku 
 MESSAGE_UNABLE_TO_RENAME_FILE_END=. By\u0107 mo\u017ce jest u\u017cywany przez inn\u0105 aplikacj\u0119.
 MESSAGE_INCOMPLETE_DIRECTORY_START=LimeWire nie pozwoli Ci na 
@@ -708,6 +705,8 @@ MESSAGE_CONTINUE_DOWNLOAD=Czy chcesz kontynuowa\u0107 pobieranie?
 ################################################################################
 INVALID_SAVE_DIR_LABEL=Wybrany katalog nie mo\u017ce zosta\u0107 u\u017cyty do zapisu pobieranych plik\u00f3w. Prosimy wybra\u0107 inny katalog w oknie wyboru katalogu.
 
+ERROR_INTERNAL_SERVLET=Podczas pracy LimeWire wyst\u0105pi\u0142 b\u0142\u0105d wewn\u0119trzny. Mimo to, LimeWire jest w stanie usun\u0105\u0107 usterk\u0119 i kontynuowa\u0107 dzia\u0142anie.
+
 ################################################################################
 # Key/Value pairs for error messages
 ################################################################################
@@ -717,7 +716,6 @@ ERROR_TOO_LOW_FOR_ULTRAPEER=UltraHosty z do\u0142\u0105czonymi listkami wymagaj\
 ERROR_TOO_HIGH_FOR_LEAF=Listki potrzebuj\u0105 tylko jednego po\u0142\u0105czenia, gdy\u017c s\u0105 zale\u017cne od UltraHosta. 
 ERROR_PORT=Prosimy poda\u0107 numer portu, kt\u00f3ry pos\u0142u\u017cy do komunikacji z sieci\u0105.\nS\u0142u\u017cy do tego jedno z p\u00f3l w oknie konfiguracyjnym.
 ERROR_INCOMING_CONNECTIONS=Wyst\u0105pi\u0142 problem z nas\u0142uchiwaniem po\u0142\u0105czen przychodz\u0105cych; program zako\u0144czy\u0142 dzia\u0142anie.
-ERROR_INTERNAL=Podczas pracy LimeWire wyst\u0105pi\u0142 b\u0142\u0105d wewn\u0119trzny. Mimo to, LimeWire jest w stanie usun\u0105\u0107 usterk\u0119 i kontynuowa\u0107 dzia\u0142anie. Prosimy skopiowa\u0107 ten tekst i przes\u0142a\u0107 go na adres bugs@limewire.com, co u\u0142atwi nam usuni\u0119cie tego b\u0142\u0119du.
 ERROR_THREE_CHARACTER_SEARCH=Prosimy wprowadzi\u0107 zapytanie o d\u0142ugo\u015bci min. trzech znak\u00f3w.
 ERROR_NETWORK_FLOODING=To zapytanie mo\u017ce wygenerowa\u0107 wiele trafie\u0144, kt\u00f3rych zebranie potrwa bardzo d\u0142ugo. Czy na pewno chcesz kontynuowa\u0107?
 ERROR_BROWSE_FAILED=Przegl\u0105dni\u0119cie plik\u00f3w na wybranym ho\u015bcie nie by\u0142o mo\u017cliwe. Najprawdopodobniej osi\u0105gni\u0119ty zosta\u0142 limit po\u0142\u0105cze\u0144.
@@ -769,7 +767,7 @@ OPTIONS_CONNECTIONS_MAIN_TITLE=Po\u0142\u0105czenia
 OPTIONS_SHUTDOWN_MAIN_TITLE=Zamykanie
 OPTIONS_CHAT_MAIN_TITLE=Czat
 OPTIONS_PLAYER_MAIN_TITLE=Odtwarzacz
-OPTIONS_BROWSER_MAIN_TITLE=Przegl\u0105darka
+#??? OPTIONS_APPS_MAIN_TITLE=Helper apps
 #??? OPTIONS_GUI_MAIN_TITLE=View
 #??? OPTIONS_POPUPS_MAIN_TITLE=Popups
 #??? OPTIONS_AUTOCOMPLETE_MAIN_TITLE=Autocomplete text
@@ -1106,7 +1104,6 @@ OPTIONS_PORT_BOX_LABEL=Nas\u0142uchuj na porcie:
 OPTIONS_FORCE_IP_TITLE=Wymuszanie adresu IP
 OPTIONS_FORCE_IP_LABEL=Umo\u017cliwia wymuszenie adresu IP w sytuacji kiedy znajdujesz si\u0119 za firewall-em, a chcia\u0142by\u015b uzyska\u0107 bezproblemowe po\u0142\u0105czenie z Gnutell\u0105.
 OPTIONS_FORCE_IP_CHECK_BOX_LABEL=Wymuszaj IP
-OPTIONS_FORCE_IP_IP_LABEL=Adres:
 OPTIONS_FORCE_IP_PORT_LABEL=Port:
 
 ################################################################################
@@ -1349,8 +1346,6 @@ STATS_RECEIVED_AVERAGE_LIME_MESSAGE_SIZE_LABEL=The average size in kilobytes of 
 #??? SENT_MESSAGE_NUMBER=Number
 SENT_MESSAGE_BYTES=KB
 SENT_LIMEWIRE=Wiadomo\u015bci LimeWire
-SENT_ULTRAPEER=UltraHost
-SENT_LEAF=Listek
 
 #??? LIME_SENT_MESSAGES_NUMBER=Number
 STATS_SENT_TCP=TCP
