--- a/lib/messagebundles/MessagesBundle_sl.properties
+++ b/lib/messagebundles/MessagesBundle_sl.properties
@@ -92,7 +92,7 @@ GENERAL_UNIT_KBPSEC=kB/s
 ABOUT_TITLE=O programu LimeWire
 ABOUT_LABEL_START=LimeWire odjemalec
 ABOUT_LABEL_ADDRESS=http://www.limewire.com
-ABOUT_LABEL_END=Avtorske pravice ima (c)2000-2003 Lime Wire LLC
+ABOUT_LABEL_END=Avtorske pravice ima (c)2000-2004 Lime Wire LLC
 ABOUT_LABEL_TITLE=O programu LimeWire
 ABOUT_BUTTON_LABEL=V redu
 ABOUT_BUTTON_TIP=Zapre okno.
@@ -103,7 +103,7 @@ ABOUT_FILE_NAME=about_sl.html
 ###################################################################
 # Key/value pairs for the Windows system tray -- Coming soon...
 ###################################################################
-TRAY_TOOL=LimeWire: Poganjam mre\u017eo Gnutella
+TRAY_TOOLTIP=LimeWire: Poganjam mre\u017eo Gnutella
 TRAY_RESTORE_LABEL=Pove\u010daj
 TRAY_ABOUT_LABEL=O programu
 TRAY_EXIT_LATER_LABEL=Kon\u010daj po prenosih
@@ -253,7 +253,6 @@ SEARCH_STOP_BUTTON_TIP=Preneha iskati nove zadetke v izbranem zavihku.
 SEARCH_PUBLIC_KILL_STRING=Zapri iskanje
 SEARCH_PUBLIC_LAUNCH_STRING=Po\u017eeni
 SEARCH_PUBLIC_STOP_STRING=Prenehaj iskanje
-SEARCH_PUBLIC_GROUP_STRING=Zdru\u017eeno
 SEARCH_PUBLIC_BROWSE_STRING=Brskaj po gost.
 SEARCH_PUBLIC_CHAT_STRING=Klepetaj
 SEARCH_PUBLIC_BITZI_LOOKUP_STRING=Spletni pregled Bitzi ...
@@ -284,7 +283,6 @@ RESULT_PANEL_NAME=Ime
 RESULT_PANEL_TYPE=Tip
 RESULT_PANEL_SIZE=Velikost
 RESULT_PANEL_SPEED=Hitrost
-RESULT_PANEL_SCORE=Rezultat
 RESULT_PANEL_CHAT=Klepet
 RESULT_PANEL_LOCATION=Mesto
 RESULT_PANEL_COUNT=#
@@ -363,9 +361,7 @@ DOWNLOAD_TIME_REMAINING_COLUMN=\u010cas
 DOWNLOAD_SERVER_COLUMN=Program/razli\u010dico
 DOWNLOAD_STATUS_QUEUED=V vrsti
 DOWNLOAD_STATUS_CONNECTING=Povezujem se...
-DOWNLOAD_STATUS_WAITING_START=\u010cakam...
-DOWNLOAD_STATUS_WAITING_MIDDLE=s za
-DOWNLOAD_STATUS_WAITING_END=zasedeno
+DOWNLOAD_STATUS_WAITING=\u010cakam za zasedeno
 DOWNLOAD_STATUS_COMPLETE=Kon\u010dano
 DOWNLOAD_STATUS_ABORTED=Preklicano
 DOWNLOAD_STATUS_FAILED=Ne morem prenesti
@@ -680,11 +676,12 @@ MESSAGE_OVERWRITE_EXISTING_FILE=Prepis obstoje\u010de datoteke
 MESSAGE_FILE_LAUNCHING_SECURITY_MESSAGE=LimeWire tak\u0161nih datotek ne poganja iz varnostnih razlogov.
 MESSAGE_CONFIRM_FILE_DELETE=Ste prepri\u010dani, da \u017eelite zbrisati izbrano datoteko ali datoteke?
 MESSAGE_UNABLE_TO_DELETE_FILE_START=Datoteke ne morem zbrisati.
-MESSAGE_UNABLE_TO_DELETE_FILE_END=Morda jo uporablja drug program.
+MESSAGE_UNABLE_TO_DELETE_FILE_END=. Morda jo uporablja drug program.
 MESSAGE_UNABLE_TO_DELETE_DIRECTORY_START=Imenika ne morem zbrisati.
-MESSAGE_UNABLE_TO_DELETE_DIRECTORY_END=. Morda ga uporablja drug program.
+MESSAGE_UNABLE_TO_RENAME_DIRECTORY_START=Imenika ne morem preimenovati
+MESSAGE_UNABLE_TO_CHANGE_DIRECTORY_END=. Morda ga uporablja drug program.
 MESSAGE_UNABLE_TO_RENAME_FILE_START=Datoteke ne morem preimenovati
-MESSAGE_UNABLE_TO_RENAME_FILE_END=Morda jo uporablja drug program..
+MESSAGE_UNABLE_TO_RENAME_FILE_END=. Morda jo uporablja drug program..
 MESSAGE_INCOMPLETE_DIRECTORY_START=LimeWire ne more dovoliti
 MESSAGE_INCOMPLETE_DIRECTORY_END=imenika, rezerviranega za nedokon\u010dane datoteke.
 MESSAGE_INVALID_SAVE_DIRECTORY=LimeWire ne more uporabljati izbranega imenika za shranjevanje datotek. Prosim, poskusite drug imenik.
@@ -697,6 +694,8 @@ MESSAGE_CONTINUE_DOWNLOAD=\u017delite ne glede na to nadaljevati prenos?
 ################################################################################
 INVALID_SAVE_DIR_LABEL=Shranjen imenik za shranjevanje datotek ni veljaven. Prosim, vnesite ime drugega imenika.
 
+ERROR_INTERNAL_SERVLET=Pri poganjanju programa LimeWire je pri\u0161lo do notranje napake. Vendar pa si lahko LimeWire od te napake opomore in \u0161e naprej te\u010de.
+
 ################################################################################
 # Key/Value pairs for error messages
 ################################################################################
@@ -706,7 +705,6 @@ ERROR_TOO_LOW_FOR_ULTRAPEER=Ultrapeeri z listnimi nodi potrebujejo vsaj \u0161es
 ERROR_TOO_HIGH_FOR_LEAF=Listi potrebujejo le eno povezavo, saj so povezani z Ultrapeerjem.
 ERROR_PORT=Ne najdem vrat, ki jih lahko uporabim za vhodne povezave.\nProsim, specificirajte vrata sami v konfiguraciji.
 ERROR_INCOMING_CONNECTIONS=Ne morem poslu\u0161ati vti\u010da za vhodne povezave; prekinjam.
-ERROR_INTERNAL=Pri poganjanju programa LimeWire je pri\u0161lo do notranje napake. Vendar pa si lahko LimeWire od te napake opomore in \u0161e naprej te\u010de. Prosimo pa vas, da bi bili tako prijazni in spodnje besedilo preko e-po\u0161te poslali na naslov bugs@limewire.com, saj nam boste tako pomagali pri odstranjevanju napak v programu.
 ERROR_THREE_CHARACTER_SEARCH=Iskalni pogoj mora imeti vsaj tri znake, kajti druga\u010de bi gotovo ma\u0161ili mre\u017eo.
 ERROR_NETWORK_FLOODING=To iskanje lahko dobi veliko zadetkov in lahko tako upo\u010dasni mre\u017eo. Ste prepri\u010dani, da \u017eelite nadaljevati?
 ERROR_BROWSE_FAILED=Ne morem brskati po datotekah na zahtevanem gostitelju. Ta ra\u010dunalnik najbr\u017e ne sprejema \u0161e ve\u010d vhodnih povezav..
@@ -1086,7 +1084,6 @@ OPTIONS_PORT_BOX_LABEL=Poslu\u0161aj na vratih:
 OPTIONS_FORCE_IP_TITLE=Vsiljevanje lokalnega IP naslova
 OPTIONS_FORCE_IP_LABEL=Ta mo\u017enost vam omogo\u010da vsiljevanje lastnega IP naslova, \u010de ste za po\u017earnim zidom, in \u017eelite, da bi se k vam drugi Gnutella odjemalci lahko povezali, ne da bi jim bilo potrebno poslati PUSH zahtevo.
 OPTIONS_FORCE_IP_CHECK_BOX_LABEL=Vsiljevanje IP naslova
-OPTIONS_FORCE_IP_IP_LABEL=Naslov:
 OPTIONS_FORCE_IP_PORT_LABEL=Vrata:
 
 ################################################################################
@@ -1329,8 +1326,6 @@ SENT_MESSAGES=Poslano
 SENT_MESSAGE_NUMBER=\u0160tevilo
 SENT_MESSAGE_BYTES=Kilobytei
 SENT_LIMEWIRE=Sporo\u010dila LimeWire
-SENT_ULTRAPEER=Ultrapeer
-SENT_LEAF=List
 
 LIME_SENT_MESSAGES_NUMBER=\u0160tevilo
 STATS_SENT_TCP=TCP
